// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/.gitignore from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"/config
/crypto-config
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/collections/and-policy-chaincode.json from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"[
  {
    \\"name\\": \\"org1-collection\\",
    \\"policy\\": \\"OR('Org1MSP.member')\\",
    \\"requiredPeerCount\\": 1,
    \\"maxPeerCount\\": 3,
    \\"blockToLive\\": 0,
    \\"memberOnlyRead\\": true
  }
]"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/collections/or-policy-chaincode.json from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"[
  {
    \\"name\\": \\"org1-collection\\",
    \\"policy\\": \\"OR('Org1MSP.member')\\",
    \\"requiredPeerCount\\": 1,
    \\"maxPeerCount\\": 3,
    \\"blockToLive\\": 0,
    \\"memberOnlyRead\\": true
  }
]"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/configtx.yaml from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"################################################################################
#   SECTION: Capabilities
################################################################################
Capabilities:
    Channel: &ChannelCapabilities
        V1_4_3: true
    Orderer: &OrdererCapabilities
        V1_4_2: true
    Application: &ApplicationCapabilities
        V1_4_2: true

################################################################################
#   CHANNEL Defaults
################################################################################
Channel: &ChannelDefaults
    Policies:
        Readers:
            Type: ImplicitMeta
            Rule: \\"ANY Readers\\"
        Writers:
            Type: ImplicitMeta
            Rule: \\"ANY Writers\\"
        Admins:
            Type: ImplicitMeta
            Rule: \\"MAJORITY Admins\\"
    Capabilities:
        <<: *ChannelCapabilities

################################################################################
#   Section: Organizations
################################################################################
Organizations:
    - &Orderer
      Name: OrdererMSP
      ID: OrdererMSP
      MSPDir: crypto-config/peerOrganizations/orderer.example.com/msp

      Policies:
          Readers:
              Type: Signature
              Rule: \\"OR('OrdererMSP.member')\\"
          Writers:
              Type: Signature
              Rule: \\"OR('OrdererMSP.member')\\"
          Admins:
              Type: Signature
              Rule: \\"OR('OrdererMSP.admin')\\"
          Endorsement:
              Type: Signature
              Rule: \\"OR('OrdererMSP.member')\\"

      AnchorPeers:

    - &Org1
      Name: Org1MSP
      ID: Org1MSP
      MSPDir: crypto-config/peerOrganizations/org1.example.com/msp

      Policies:
          Readers:
              Type: Signature
              Rule: \\"OR('Org1MSP.member')\\"
          Writers:
              Type: Signature
              Rule: \\"OR('Org1MSP.member')\\"
          Admins:
              Type: Signature
              Rule: \\"OR('Org1MSP.admin')\\"
          Endorsement:
              Type: Signature
              Rule: \\"OR('Org1MSP.member')\\"

      AnchorPeers:
          - Host: peer0.org1.example.com
            Port: 7041

          - Host: peer1.org1.example.com
            Port: 7042

    - &Org2
      Name: Org2MSP
      ID: Org2MSP
      MSPDir: crypto-config/peerOrganizations/org2.example.com/msp

      Policies:
          Readers:
              Type: Signature
              Rule: \\"OR('Org2MSP.member')\\"
          Writers:
              Type: Signature
              Rule: \\"OR('Org2MSP.member')\\"
          Admins:
              Type: Signature
              Rule: \\"OR('Org2MSP.admin')\\"
          Endorsement:
              Type: Signature
              Rule: \\"OR('Org2MSP.member')\\"

      AnchorPeers:
          - Host: peer0.org2.example.com
            Port: 7061

################################################################################
#   SECTION: Application
################################################################################
Application: &ApplicationDefaults
    Organizations:
    # Policies defines the set of policies at this level of the config tree
    # For Application policies, their canonical path is
    #   /Channel/Application/<PolicyName>
    Policies:
        Readers:
            Type: ImplicitMeta
            Rule: \\"ANY Readers\\"
        Writers:
            Type: ImplicitMeta
            Rule: \\"ANY Writers\\"
        Admins:
            Type: ImplicitMeta
            Rule: \\"MAJORITY Admins\\"
        Endorsement:
            Type: ImplicitMeta
            Rule: \\"MAJORITY Endorsement\\"
    Capabilities:
        <<: *ApplicationCapabilities

################################################################################
#   SECTION: Orderer
################################################################################
Orderer: &Group1Defaults
    OrdererType: solo
    Addresses:
        - orderer0.group1.orderer.example.com:7030
    BatchTimeout: 2s
    BatchSize:
        MaxMessageCount: 10
        AbsoluteMaxBytes: 99 MB
        PreferredMaxBytes: 512 KB
    Organizations:
    # Policies defines the set of policies at this level of the config tree
    # For Orderer policies, their canonical path is
    #   /Channel/Orderer/<PolicyName>
    Policies:
        Readers:
            Type: ImplicitMeta
            Rule: \\"ANY Readers\\"
        Writers:
            Type: ImplicitMeta
            Rule: \\"ANY Writers\\"
        Admins:
            Type: ImplicitMeta
            Rule: \\"MAJORITY Admins\\"
        # BlockValidation specifies what signatures must be included in the block
        # from the orderer for the peer to validate it.
        BlockValidation:
            Type: ImplicitMeta
            Rule: \\"ANY Writers\\"
    Capabilities:
        <<: *OrdererCapabilities

################################################################################
#   Profile
################################################################################
# https://github:com/hyperledger/fabric/blob/master/sampleconfig/configtx.yaml

Profiles:
    # Profile used to create Genesis block for group group1 #
    Group1Genesis:
        <<: *ChannelDefaults
        Orderer:
            <<: *Group1Defaults
            Organizations:
                - *Orderer
            Capabilities:
                <<: *OrdererCapabilities
        Consortiums:
            SampleConsortium:
                Organizations:
                    - *Orderer
                    - *Org1
                    - *Org2

    # Profile used to create channeltx for my-channel1 #
    MyChannel1:
        <<: *ChannelDefaults
        Orderer:
            <<: *Group1Defaults
            Organizations:
                - *Orderer
            Capabilities:
                <<: *ApplicationCapabilities
        Consortium: SampleConsortium
        Consortiums:
            SampleConsortium:
                Organizations:
                    - *Org1
                    - *Org2
        Application:
            <<: *ApplicationDefaults
            Organizations:
                - *Org1
                - *Org2
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/connection-profiles/connection-profile-orderer.json from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"{
  \\"name\\": \\"fablo-test-network-orderer\\",
  \\"description\\": \\"Connection profile for Orderer in Fablo network\\",
  \\"version\\": \\"1.0.0\\",
  \\"client\\": {
    \\"organization\\": \\"Orderer\\"
  },
  \\"organizations\\": {
    \\"Orderer\\": {
      \\"mspid\\": \\"OrdererMSP\\",
      \\"peers\\": [
        \\"peer0.org1.example.com\\",
        \\"peer1.org1.example.com\\",
        \\"peer0.org2.example.com\\"
      ],
      \\"certificateAuthorities\\": [
        \\"ca.orderer.example.com\\"
      ]
    }
  },
  \\"peers\\": {
    \\"peer0.org1.example.com\\": {
      \\"url\\": \\"grpc://localhost:7041\\"
    },
    \\"peer1.org1.example.com\\": {
      \\"url\\": \\"grpc://localhost:7042\\"
    },
    \\"peer0.org2.example.com\\": {
      \\"url\\": \\"grpc://localhost:7061\\"
    }
  },
  \\"certificateAuthorities\\": {
    \\"ca.orderer.example.com\\": {
      \\"url\\": \\"http://localhost:7020\\",
      \\"caName\\": \\"ca.orderer.example.com\\",
      \\"httpOptions\\": {
        \\"verify\\": false
      }
    }
  }
}
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/connection-profiles/connection-profile-orderer.yaml from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"name: fablo-test-network-orderer
description: Connection profile for Orderer in Fablo network
version: 1.0.0
client:
  organization: Orderer
organizations:
  Orderer:
    mspid: OrdererMSP
    peers:
      - peer0.org1.example.com
      - peer1.org1.example.com
      - peer0.org2.example.com
    certificateAuthorities:
      - ca.orderer.example.com
peers:
  peer0.org1.example.com:
    url: grpc://localhost:7041
  peer1.org1.example.com:
    url: grpc://localhost:7042
  peer0.org2.example.com:
    url: grpc://localhost:7061
certificateAuthorities:
  ca.orderer.example.com:
    url: http://localhost:7020
    caName: ca.orderer.example.com
    httpOptions:
      verify: false
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/connection-profiles/connection-profile-org1.json from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"{
  \\"name\\": \\"fablo-test-network-org1\\",
  \\"description\\": \\"Connection profile for Org1 in Fablo network\\",
  \\"version\\": \\"1.0.0\\",
  \\"client\\": {
    \\"organization\\": \\"Org1\\"
  },
  \\"organizations\\": {
    \\"Org1\\": {
      \\"mspid\\": \\"Org1MSP\\",
      \\"peers\\": [
        \\"peer0.org1.example.com\\",
        \\"peer1.org1.example.com\\",
        \\"peer0.org2.example.com\\"
      ],
      \\"certificateAuthorities\\": [
        \\"ca.org1.example.com\\"
      ]
    }
  },
  \\"peers\\": {
    \\"peer0.org1.example.com\\": {
      \\"url\\": \\"grpc://localhost:7041\\"
    },
    \\"peer1.org1.example.com\\": {
      \\"url\\": \\"grpc://localhost:7042\\"
    },
    \\"peer0.org2.example.com\\": {
      \\"url\\": \\"grpc://localhost:7061\\"
    }
  },
  \\"certificateAuthorities\\": {
    \\"ca.org1.example.com\\": {
      \\"url\\": \\"http://localhost:7040\\",
      \\"caName\\": \\"ca.org1.example.com\\",
      \\"httpOptions\\": {
        \\"verify\\": false
      }
    }
  }
}
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/connection-profiles/connection-profile-org1.yaml from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"name: fablo-test-network-org1
description: Connection profile for Org1 in Fablo network
version: 1.0.0
client:
  organization: Org1
organizations:
  Org1:
    mspid: Org1MSP
    peers:
      - peer0.org1.example.com
      - peer1.org1.example.com
      - peer0.org2.example.com
    certificateAuthorities:
      - ca.org1.example.com
peers:
  peer0.org1.example.com:
    url: grpc://localhost:7041
  peer1.org1.example.com:
    url: grpc://localhost:7042
  peer0.org2.example.com:
    url: grpc://localhost:7061
certificateAuthorities:
  ca.org1.example.com:
    url: http://localhost:7040
    caName: ca.org1.example.com
    httpOptions:
      verify: false
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/connection-profiles/connection-profile-org2.json from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"{
  \\"name\\": \\"fablo-test-network-org2\\",
  \\"description\\": \\"Connection profile for Org2 in Fablo network\\",
  \\"version\\": \\"1.0.0\\",
  \\"client\\": {
    \\"organization\\": \\"Org2\\"
  },
  \\"organizations\\": {
    \\"Org2\\": {
      \\"mspid\\": \\"Org2MSP\\",
      \\"peers\\": [
        \\"peer0.org1.example.com\\",
        \\"peer1.org1.example.com\\",
        \\"peer0.org2.example.com\\"
      ],
      \\"certificateAuthorities\\": [
        \\"ca.org2.example.com\\"
      ]
    }
  },
  \\"peers\\": {
    \\"peer0.org1.example.com\\": {
      \\"url\\": \\"grpc://localhost:7041\\"
    },
    \\"peer1.org1.example.com\\": {
      \\"url\\": \\"grpc://localhost:7042\\"
    },
    \\"peer0.org2.example.com\\": {
      \\"url\\": \\"grpc://localhost:7061\\"
    }
  },
  \\"certificateAuthorities\\": {
    \\"ca.org2.example.com\\": {
      \\"url\\": \\"http://localhost:7060\\",
      \\"caName\\": \\"ca.org2.example.com\\",
      \\"httpOptions\\": {
        \\"verify\\": false
      }
    }
  }
}
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/connection-profiles/connection-profile-org2.yaml from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"name: fablo-test-network-org2
description: Connection profile for Org2 in Fablo network
version: 1.0.0
client:
  organization: Org2
organizations:
  Org2:
    mspid: Org2MSP
    peers:
      - peer0.org1.example.com
      - peer1.org1.example.com
      - peer0.org2.example.com
    certificateAuthorities:
      - ca.org2.example.com
peers:
  peer0.org1.example.com:
    url: grpc://localhost:7041
  peer1.org1.example.com:
    url: grpc://localhost:7042
  peer0.org2.example.com:
    url: grpc://localhost:7061
certificateAuthorities:
  ca.org2.example.com:
    url: http://localhost:7060
    caName: ca.org2.example.com
    httpOptions:
      verify: false
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/crypto-config-orderer.yaml from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"PeerOrgs:
  - Name: Orderer
    Domain: orderer.example.com
    Specs:
      - Hostname: orderer0.group1
    Template:
      Count: 0
    Users:
      Count: 1
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/crypto-config-org1.yaml from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"PeerOrgs:
  - Name: Org1
    Domain: org1.example.com
    Specs:
    Template:
      Count: 2
    Users:
      Count: 1
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/crypto-config-org2.yaml from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"PeerOrgs:
  - Name: Org2
    Domain: org2.example.com
    Specs:
    Template:
      Count: 1
    Users:
      Count: 1
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/explorer/config-global.json from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"{
  \\"network-configs\\": {
    \\"network-org1\\": {
      \\"name\\": \\"Network of Org1\\",
      \\"profile\\": \\"/opt/explorer/app/platform/fabric/connection-profile/connection-profile-org1.json\\"
    },
    \\"network-org2\\": {
      \\"name\\": \\"Network of Org2\\",
      \\"profile\\": \\"/opt/explorer/app/platform/fabric/connection-profile/connection-profile-org2.json\\"
    }
  },
  \\"license\\": \\"Apache-2.0\\"
}
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker.sh from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"#!/usr/bin/env bash

set -eu

FABLO_NETWORK_ROOT=\\"$(cd \\"$(dirname \\"$0\\")\\" && pwd)\\"

source \\"$FABLO_NETWORK_ROOT/fabric-docker/scripts/base-help.sh\\"
source \\"$FABLO_NETWORK_ROOT/fabric-docker/scripts/base-functions.sh\\"
source \\"$FABLO_NETWORK_ROOT/fabric-docker/scripts/chaincode-functions.sh\\"
source \\"$FABLO_NETWORK_ROOT/fabric-docker/channel-query-scripts.sh\\"
source \\"$FABLO_NETWORK_ROOT/fabric-docker/snapshot-scripts.sh\\"
source \\"$FABLO_NETWORK_ROOT/fabric-docker/commands-generated.sh\\"
source \\"$FABLO_NETWORK_ROOT/fabric-docker/.env\\"

networkUp() {
  generateArtifacts
  startNetwork
  generateChannelsArtifacts
  installChannels
  installChaincodes
  notifyOrgsAboutChannels
  printHeadline \\"Done! Enjoy your fresh network\\" \\"U1F984\\"
}

if [ \\"$1\\" = \\"up\\" ]; then
  networkUp
elif [ \\"$1\\" = \\"down\\" ]; then
  networkDown
elif [ \\"$1\\" = \\"reset\\" ]; then
  networkDown
  networkUp
elif [ \\"$1\\" = \\"start\\" ]; then
  startNetwork
elif [ \\"$1\\" = \\"stop\\" ]; then
  stopNetwork
elif [ \\"$1\\" = \\"chaincode\\" ] && [ \\"$2\\" = \\"install\\" ]; then
  installChaincodes
elif [ \\"$1\\" = \\"chaincode\\" ] && [ \\"$2\\" = \\"upgrade\\" ]; then
  upgradeChaincode \\"$3\\" \\"$4\\"
elif [ \\"$1\\" = \\"channel\\" ]; then
  channelQuery \\"\${@:2}\\"
elif [ \\"$1\\" = \\"snapshot\\" ]; then
  createSnapshot \\"$2\\"
elif [ \\"$1\\" = \\"clone-to\\" ]; then
  cloneSnapshot \\"$2\\"
elif [ \\"$1\\" = \\"help\\" ]; then
  printHelp
elif [ \\"$1\\" = \\"--help\\" ]; then
  printHelp
else
  echo \\"No command specified\\"
  echo \\"Basic commands are: up, down, start, stop, reset\\"
  echo \\"To list channel query helper commands type: 'fablo channel --help'\\"
  echo \\"Also check: 'chaincode install'\\"
  echo \\"Use 'help' or '--help' for more information\\"
fi
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/.env from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"FABLO_VERSION=1.0.2
FABLO_BUILD=<date with git hash>
FABLO_REST_VERSION=0.1.0
HYPERLEDGER_EXPLORER_VERSION=1.1.8

COUCHDB_VERSION=3.1
FABRIC_COUCHDB_VERSION=0.4.18

FABLO_CONFIG=<absolute path>
CHAINCODES_BASE_DIR=<absolute path>

COMPOSE_PROJECT_NAME=<name with timestamp>
LOGGING_LEVEL=info

FABRIC_VERSION=1.4.11
FABRIC_CA_VERSION=1.5.0
FABRIC_CA_POSTGRES_VERSION=14
FABRIC_CCENV_VERSION=1.4.11
FABRIC_BASEOS_VERSION=0.4.9
FABRIC_JAVAENV_VERSION=1.4.8

ROOT_CA_ADMIN_NAME=admin
ROOT_CA_ADMIN_PASSWORD=adminpw

ORDERER_CA_ADMIN_NAME=admin
ORDERER_CA_ADMIN_PASSWORD=adminpw

ORG1_CA_ADMIN_NAME=admin
ORG1_CA_ADMIN_PASSWORD=adminpw

ORG2_CA_ADMIN_NAME=admin
ORG2_CA_ADMIN_PASSWORD=adminpw

"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/channel-query-scripts.sh from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"#!/usr/bin/env bash

source \\"$FABLO_NETWORK_ROOT/fabric-docker/scripts/channel-query-functions.sh\\"

set -eu

channelQuery() {
  echo \\"-> Channel query: \\" + \\"$@\\"

  if [ \\"$#\\" -eq 1 ]; then
    printChannelsHelp

  elif [ \\"$1\\" = \\"list\\" ] && [ \\"$2\\" = \\"org1\\" ] && [ \\"$3\\" = \\"peer0\\" ]; then

    peerChannelList \\"cli.org1.example.com\\" \\"peer0.org1.example.com:7041\\"

  elif
    [ \\"$1\\" = \\"list\\" ] && [ \\"$2\\" = \\"org1\\" ] && [ \\"$3\\" = \\"peer1\\" ]
  then

    peerChannelList \\"cli.org1.example.com\\" \\"peer1.org1.example.com:7042\\"

  elif
    [ \\"$1\\" = \\"list\\" ] && [ \\"$2\\" = \\"org2\\" ] && [ \\"$3\\" = \\"peer0\\" ]
  then

    peerChannelList \\"cli.org2.example.com\\" \\"peer0.org2.example.com:7061\\"

  elif

    [ \\"$1\\" = \\"getinfo\\" ] && [ \\"$2\\" = \\"my-channel1\\" ] && [ \\"$3\\" = \\"org1\\" ] && [ \\"$4\\" = \\"peer0\\" ]
  then

    peerChannelGetInfo \\"my-channel1\\" \\"cli.org1.example.com\\" \\"peer0.org1.example.com:7041\\"

  elif [ \\"$1\\" = \\"fetch\\" ] && [ \\"$2\\" = \\"config\\" ] && [ \\"$3\\" = \\"my-channel1\\" ] && [ \\"$4\\" = \\"org1\\" ] && [ \\"$5\\" = \\"peer0\\" ] && [ \\"$#\\" = 7 ]; then
    FILE_NAME=$6

    peerChannelFetchConfig \\"my-channel1\\" \\"cli.org1.example.com\\" \\"\${FILE_NAME}\\" \\"peer0.org1.example.com:7041\\"

  elif [ \\"$1\\" = \\"fetch\\" ] && [ \\"$2\\" = \\"lastBlock\\" ] && [ \\"$3\\" = \\"my-channel1\\" ] && [ \\"$4\\" = \\"org1\\" ] && [ \\"$5\\" = \\"peer0\\" ] && [ \\"$#\\" = 7 ]; then
    FILE_NAME=$6

    peerChannelFetchLastBlock \\"my-channel1\\" \\"cli.org1.example.com\\" \\"\${FILE_NAME}\\" \\"peer0.org1.example.com:7041\\"

  elif [ \\"$1\\" = \\"fetch\\" ] && [ \\"$2\\" = \\"firstBlock\\" ] && [ \\"$3\\" = \\"my-channel1\\" ] && [ \\"$4\\" = \\"org1\\" ] && [ \\"$5\\" = \\"peer0\\" ] && [ \\"$#\\" = 7 ]; then
    FILE_NAME=$6

    peerChannelFetchFirstBlock \\"my-channel1\\" \\"cli.org1.example.com\\" \\"\${FILE_NAME}\\" \\"peer0.org1.example.com:7041\\"

  elif [ \\"$1\\" = \\"fetch\\" ] && [ \\"$2\\" = \\"block\\" ] && [ \\"$3\\" = \\"my-channel1\\" ] && [ \\"$4\\" = \\"org1\\" ] && [ \\"$5\\" = \\"peer0\\" ] && [ \\"$#\\" = 8 ]; then
    FILE_NAME=$6
    BLOCK_NUMBER=$7

    peerChannelFetchBlock \\"my-channel1\\" \\"cli.org1.example.com\\" \\"\${FILE_NAME}\\" \\"\${BLOCK_NUMBER}\\" \\"peer0.org1.example.com:7041\\"

  elif
    [ \\"$1\\" = \\"getinfo\\" ] && [ \\"$2\\" = \\"my-channel1\\" ] && [ \\"$3\\" = \\"org1\\" ] && [ \\"$4\\" = \\"peer1\\" ]
  then

    peerChannelGetInfo \\"my-channel1\\" \\"cli.org1.example.com\\" \\"peer1.org1.example.com:7042\\"

  elif [ \\"$1\\" = \\"fetch\\" ] && [ \\"$2\\" = \\"config\\" ] && [ \\"$3\\" = \\"my-channel1\\" ] && [ \\"$4\\" = \\"org1\\" ] && [ \\"$5\\" = \\"peer1\\" ] && [ \\"$#\\" = 7 ]; then
    FILE_NAME=$6

    peerChannelFetchConfig \\"my-channel1\\" \\"cli.org1.example.com\\" \\"\${FILE_NAME}\\" \\"peer1.org1.example.com:7042\\"

  elif [ \\"$1\\" = \\"fetch\\" ] && [ \\"$2\\" = \\"lastBlock\\" ] && [ \\"$3\\" = \\"my-channel1\\" ] && [ \\"$4\\" = \\"org1\\" ] && [ \\"$5\\" = \\"peer1\\" ] && [ \\"$#\\" = 7 ]; then
    FILE_NAME=$6

    peerChannelFetchLastBlock \\"my-channel1\\" \\"cli.org1.example.com\\" \\"\${FILE_NAME}\\" \\"peer1.org1.example.com:7042\\"

  elif [ \\"$1\\" = \\"fetch\\" ] && [ \\"$2\\" = \\"firstBlock\\" ] && [ \\"$3\\" = \\"my-channel1\\" ] && [ \\"$4\\" = \\"org1\\" ] && [ \\"$5\\" = \\"peer1\\" ] && [ \\"$#\\" = 7 ]; then
    FILE_NAME=$6

    peerChannelFetchFirstBlock \\"my-channel1\\" \\"cli.org1.example.com\\" \\"\${FILE_NAME}\\" \\"peer1.org1.example.com:7042\\"

  elif [ \\"$1\\" = \\"fetch\\" ] && [ \\"$2\\" = \\"block\\" ] && [ \\"$3\\" = \\"my-channel1\\" ] && [ \\"$4\\" = \\"org1\\" ] && [ \\"$5\\" = \\"peer1\\" ] && [ \\"$#\\" = 8 ]; then
    FILE_NAME=$6
    BLOCK_NUMBER=$7

    peerChannelFetchBlock \\"my-channel1\\" \\"cli.org1.example.com\\" \\"\${FILE_NAME}\\" \\"\${BLOCK_NUMBER}\\" \\"peer1.org1.example.com:7042\\"

  elif
    [ \\"$1\\" = \\"getinfo\\" ] && [ \\"$2\\" = \\"my-channel1\\" ] && [ \\"$3\\" = \\"org2\\" ] && [ \\"$4\\" = \\"peer0\\" ]
  then

    peerChannelGetInfo \\"my-channel1\\" \\"cli.org2.example.com\\" \\"peer0.org2.example.com:7061\\"

  elif [ \\"$1\\" = \\"fetch\\" ] && [ \\"$2\\" = \\"config\\" ] && [ \\"$3\\" = \\"my-channel1\\" ] && [ \\"$4\\" = \\"org2\\" ] && [ \\"$5\\" = \\"peer0\\" ] && [ \\"$#\\" = 7 ]; then
    FILE_NAME=$6

    peerChannelFetchConfig \\"my-channel1\\" \\"cli.org2.example.com\\" \\"\${FILE_NAME}\\" \\"peer0.org2.example.com:7061\\"

  elif [ \\"$1\\" = \\"fetch\\" ] && [ \\"$2\\" = \\"lastBlock\\" ] && [ \\"$3\\" = \\"my-channel1\\" ] && [ \\"$4\\" = \\"org2\\" ] && [ \\"$5\\" = \\"peer0\\" ] && [ \\"$#\\" = 7 ]; then
    FILE_NAME=$6

    peerChannelFetchLastBlock \\"my-channel1\\" \\"cli.org2.example.com\\" \\"\${FILE_NAME}\\" \\"peer0.org2.example.com:7061\\"

  elif [ \\"$1\\" = \\"fetch\\" ] && [ \\"$2\\" = \\"firstBlock\\" ] && [ \\"$3\\" = \\"my-channel1\\" ] && [ \\"$4\\" = \\"org2\\" ] && [ \\"$5\\" = \\"peer0\\" ] && [ \\"$#\\" = 7 ]; then
    FILE_NAME=$6

    peerChannelFetchFirstBlock \\"my-channel1\\" \\"cli.org2.example.com\\" \\"\${FILE_NAME}\\" \\"peer0.org2.example.com:7061\\"

  elif [ \\"$1\\" = \\"fetch\\" ] && [ \\"$2\\" = \\"block\\" ] && [ \\"$3\\" = \\"my-channel1\\" ] && [ \\"$4\\" = \\"org2\\" ] && [ \\"$5\\" = \\"peer0\\" ] && [ \\"$#\\" = 8 ]; then
    FILE_NAME=$6
    BLOCK_NUMBER=$7

    peerChannelFetchBlock \\"my-channel1\\" \\"cli.org2.example.com\\" \\"\${FILE_NAME}\\" \\"\${BLOCK_NUMBER}\\" \\"peer0.org2.example.com:7061\\"

  else

    printChannelsHelp
  fi

}

printChannelsHelp() {
  echo \\"Channel management commands:\\"
  echo \\"\\"

  echo \\"fablo channel list org1 peer0\\"
  echo -e \\"\\\\t List channels on 'peer0' of 'Org1'\\".
  echo \\"\\"

  echo \\"fablo channel list org1 peer1\\"
  echo -e \\"\\\\t List channels on 'peer1' of 'Org1'\\".
  echo \\"\\"

  echo \\"fablo channel list org2 peer0\\"
  echo -e \\"\\\\t List channels on 'peer0' of 'Org2'\\".
  echo \\"\\"

  echo \\"fablo channel getinfo my-channel1 org1 peer0\\"
  echo -e \\"\\\\t Get channel info on 'peer0' of 'Org1'\\".
  echo \\"\\"
  echo \\"fablo channel fetch config my-channel1 org1 peer0 <fileName.json>\\"
  echo -e \\"\\\\t Download latest config block to current dir. Uses first peer 'peer0' of 'Org1'\\".
  echo \\"\\"
  echo \\"fablo channel fetch lastBlock my-channel1 org1 peer0 <fileName.json>\\"
  echo -e \\"\\\\t Download last, decrypted block to current dir. Uses first peer 'peer0' of 'Org1'\\".
  echo \\"\\"
  echo \\"fablo channel fetch firstBlock my-channel1 org1 peer0 <fileName.json>\\"
  echo -e \\"\\\\t Download first, decrypted block to current dir. Uses first peer 'peer0' of 'Org1'\\".
  echo \\"\\"

  echo \\"fablo channel getinfo my-channel1 org1 peer1\\"
  echo -e \\"\\\\t Get channel info on 'peer1' of 'Org1'\\".
  echo \\"\\"
  echo \\"fablo channel fetch config my-channel1 org1 peer1 <fileName.json>\\"
  echo -e \\"\\\\t Download latest config block to current dir. Uses first peer 'peer1' of 'Org1'\\".
  echo \\"\\"
  echo \\"fablo channel fetch lastBlock my-channel1 org1 peer1 <fileName.json>\\"
  echo -e \\"\\\\t Download last, decrypted block to current dir. Uses first peer 'peer1' of 'Org1'\\".
  echo \\"\\"
  echo \\"fablo channel fetch firstBlock my-channel1 org1 peer1 <fileName.json>\\"
  echo -e \\"\\\\t Download first, decrypted block to current dir. Uses first peer 'peer1' of 'Org1'\\".
  echo \\"\\"

  echo \\"fablo channel getinfo my-channel1 org2 peer0\\"
  echo -e \\"\\\\t Get channel info on 'peer0' of 'Org2'\\".
  echo \\"\\"
  echo \\"fablo channel fetch config my-channel1 org2 peer0 <fileName.json>\\"
  echo -e \\"\\\\t Download latest config block to current dir. Uses first peer 'peer0' of 'Org2'\\".
  echo \\"\\"
  echo \\"fablo channel fetch lastBlock my-channel1 org2 peer0 <fileName.json>\\"
  echo -e \\"\\\\t Download last, decrypted block to current dir. Uses first peer 'peer0' of 'Org2'\\".
  echo \\"\\"
  echo \\"fablo channel fetch firstBlock my-channel1 org2 peer0 <fileName.json>\\"
  echo -e \\"\\\\t Download first, decrypted block to current dir. Uses first peer 'peer0' of 'Org2'\\".
  echo \\"\\"

}
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/commands-generated.sh from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"#!/usr/bin/env bash

generateArtifacts() {
  printHeadline \\"Generating basic configs\\" \\"U1F913\\"

  printItalics \\"Generating crypto material for Orderer\\" \\"U1F512\\"
  certsGenerate \\"$FABLO_NETWORK_ROOT/fabric-config\\" \\"crypto-config-orderer.yaml\\" \\"peerOrganizations/orderer.example.com\\" \\"$FABLO_NETWORK_ROOT/fabric-config/crypto-config/\\"

  printItalics \\"Generating crypto material for Org1\\" \\"U1F512\\"
  certsGenerate \\"$FABLO_NETWORK_ROOT/fabric-config\\" \\"crypto-config-org1.yaml\\" \\"peerOrganizations/org1.example.com\\" \\"$FABLO_NETWORK_ROOT/fabric-config/crypto-config/\\"

  printItalics \\"Generating crypto material for Org2\\" \\"U1F512\\"
  certsGenerate \\"$FABLO_NETWORK_ROOT/fabric-config\\" \\"crypto-config-org2.yaml\\" \\"peerOrganizations/org2.example.com\\" \\"$FABLO_NETWORK_ROOT/fabric-config/crypto-config/\\"

  printItalics \\"Generating genesis block for group group1\\" \\"U1F3E0\\"
  genesisBlockCreate \\"$FABLO_NETWORK_ROOT/fabric-config\\" \\"$FABLO_NETWORK_ROOT/fabric-config/config\\" \\"Group1Genesis\\"

  # Create directory for chaincode packages to avoid permission errors on linux
  mkdir -p \\"$FABLO_NETWORK_ROOT/fabric-config/chaincode-packages\\"
}

startNetwork() {
  printHeadline \\"Starting network\\" \\"U1F680\\"
  (cd \\"$FABLO_NETWORK_ROOT\\"/fabric-docker && docker-compose up -d)
  sleep 4
}

generateChannelsArtifacts() {
  printHeadline \\"Generating config for 'my-channel1'\\" \\"U1F913\\"
  createChannelTx \\"my-channel1\\" \\"$FABLO_NETWORK_ROOT/fabric-config\\" \\"MyChannel1\\" \\"$FABLO_NETWORK_ROOT/fabric-config/config\\"
}

installChannels() {
  printHeadline \\"Creating 'my-channel1' on Org1/peer0\\" \\"U1F63B\\"
  docker exec -i cli.org1.example.com bash -c \\"source scripts/channel_fns.sh; createChannelAndJoin 'my-channel1' 'Org1MSP' 'peer0.org1.example.com:7041' 'crypto/users/Admin@org1.example.com/msp' 'orderer0.group1.orderer.example.com:7030';\\"

  printItalics \\"Joining 'my-channel1' on  Org1/peer1\\" \\"U1F638\\"
  docker exec -i cli.org1.example.com bash -c \\"source scripts/channel_fns.sh; fetchChannelAndJoin 'my-channel1' 'Org1MSP' 'peer1.org1.example.com:7042' 'crypto/users/Admin@org1.example.com/msp' 'orderer0.group1.orderer.example.com:7030';\\"
  printItalics \\"Joining 'my-channel1' on  Org2/peer0\\" \\"U1F638\\"
  docker exec -i cli.org2.example.com bash -c \\"source scripts/channel_fns.sh; fetchChannelAndJoin 'my-channel1' 'Org2MSP' 'peer0.org2.example.com:7061' 'crypto/users/Admin@org2.example.com/msp' 'orderer0.group1.orderer.example.com:7030';\\"
}

installChaincodes() {
  if [ -n \\"$(ls \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4\\")\\" ]; then
    chaincodeBuild \\"or-policy-chaincode\\" \\"node\\" \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4\\"
    printHeadline \\"Installing 'or-policy-chaincode' on my-channel1/Org1/peer0\\" \\"U1F60E\\"
    chaincodeInstall \\"cli.org1.example.com\\" \\"peer0.org1.example.com:7041\\" \\"my-channel1\\" \\"or-policy-chaincode\\" \\"0.0.1\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" \\"\\"
    printHeadline \\"Installing 'or-policy-chaincode' on my-channel1/Org1/peer1\\" \\"U1F60E\\"
    chaincodeInstall \\"cli.org1.example.com\\" \\"peer1.org1.example.com:7042\\" \\"my-channel1\\" \\"or-policy-chaincode\\" \\"0.0.1\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" \\"\\"
    printHeadline \\"Installing 'or-policy-chaincode' on my-channel1/Org2/peer0\\" \\"U1F60E\\"
    chaincodeInstall \\"cli.org2.example.com\\" \\"peer0.org2.example.com:7061\\" \\"my-channel1\\" \\"or-policy-chaincode\\" \\"0.0.1\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" \\"\\"
    printItalics \\"Instantiating chaincode 'or-policy-chaincode' on channel 'my-channel1' as 'Org1'\\" \\"U1F618\\"
    chaincodeInstantiate \\"cli.org1.example.com\\" \\"peer0.org1.example.com:7041\\" \\"my-channel1\\" \\"or-policy-chaincode\\" \\"0.0.1\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" '{\\"Args\\":[]}' \\"OR('Org1MSP.member', 'Org2MSP.member')\\" \\"\\" \\"collections/or-policy-chaincode.json\\"
  else
    echo \\"Warning! Skipping chaincode 'or-policy-chaincode' installation. Chaincode directory is empty.\\"
    echo \\"Looked in dir: '$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4'\\"
  fi
  if [ -n \\"$(ls \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4\\")\\" ]; then
    chaincodeBuild \\"and-policy-chaincode\\" \\"node\\" \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4\\"
    printHeadline \\"Installing 'and-policy-chaincode' on my-channel1/Org1/peer0\\" \\"U1F60E\\"
    chaincodeInstall \\"cli.org1.example.com\\" \\"peer0.org1.example.com:7041\\" \\"my-channel1\\" \\"and-policy-chaincode\\" \\"0.0.1\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" \\"\\"
    printHeadline \\"Installing 'and-policy-chaincode' on my-channel1/Org1/peer1\\" \\"U1F60E\\"
    chaincodeInstall \\"cli.org1.example.com\\" \\"peer1.org1.example.com:7042\\" \\"my-channel1\\" \\"and-policy-chaincode\\" \\"0.0.1\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" \\"\\"
    printHeadline \\"Installing 'and-policy-chaincode' on my-channel1/Org2/peer0\\" \\"U1F60E\\"
    chaincodeInstall \\"cli.org2.example.com\\" \\"peer0.org2.example.com:7061\\" \\"my-channel1\\" \\"and-policy-chaincode\\" \\"0.0.1\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" \\"\\"
    printItalics \\"Instantiating chaincode 'and-policy-chaincode' on channel 'my-channel1' as 'Org1'\\" \\"U1F618\\"
    chaincodeInstantiate \\"cli.org1.example.com\\" \\"peer0.org1.example.com:7041\\" \\"my-channel1\\" \\"and-policy-chaincode\\" \\"0.0.1\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" '{\\"Args\\":[]}' \\"AND('Org1MSP.member', 'Org2MSP.member')\\" \\"\\" \\"collections/and-policy-chaincode.json\\"
  else
    echo \\"Warning! Skipping chaincode 'and-policy-chaincode' installation. Chaincode directory is empty.\\"
    echo \\"Looked in dir: '$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4'\\"
  fi

}

notifyOrgsAboutChannels() {
  printHeadline \\"Creating new channel config blocks\\" \\"U1F537\\"
  createNewChannelUpdateTx \\"my-channel1\\" \\"Org1MSP\\" \\"MyChannel1\\" \\"$FABLO_NETWORK_ROOT/fabric-config\\" \\"$FABLO_NETWORK_ROOT/fabric-config/config\\"
  createNewChannelUpdateTx \\"my-channel1\\" \\"Org2MSP\\" \\"MyChannel1\\" \\"$FABLO_NETWORK_ROOT/fabric-config\\" \\"$FABLO_NETWORK_ROOT/fabric-config/config\\"

  printHeadline \\"Notyfing orgs about channels\\" \\"U1F4E2\\"
  notifyOrgAboutNewChannel \\"my-channel1\\" \\"Org1MSP\\" \\"cli.org1.example.com\\" \\"peer0.org1.example.com\\" \\"orderer0.group1.orderer.example.com:7030\\"
  notifyOrgAboutNewChannel \\"my-channel1\\" \\"Org2MSP\\" \\"cli.org2.example.com\\" \\"peer0.org2.example.com\\" \\"orderer0.group1.orderer.example.com:7030\\"

  printHeadline \\"Deleting new channel config blocks\\" \\"U1F52A\\"
  deleteNewChannelUpdateTx \\"my-channel1\\" \\"Org1MSP\\" \\"cli.org1.example.com\\"
  deleteNewChannelUpdateTx \\"my-channel1\\" \\"Org2MSP\\" \\"cli.org2.example.com\\"
}

upgradeChaincode() {
  local chaincodeName=\\"$1\\"
  if [ -z \\"$chaincodeName\\" ]; then
    echo \\"Error: chaincode name is not provided\\"
    exit 1
  fi

  local version=\\"$2\\"
  if [ -z \\"$version\\" ]; then
    echo \\"Error: chaincode version is not provided\\"
    exit 1
  fi

  if [ \\"$chaincodeName\\" = \\"or-policy-chaincode\\" ]; then
    if [ -n \\"$(ls \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4\\")\\" ]; then
      chaincodeBuild \\"or-policy-chaincode\\" \\"node\\" \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4\\"

      printHeadline \\"Installing 'or-policy-chaincode' on my-channel1/Org1/peer0\\" \\"U1F60E\\"
      chaincodeInstall \\"cli.org1.example.com\\" \\"peer0.org1.example.com:7041\\" \\"my-channel1\\" \\"or-policy-chaincode\\" \\"$version\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" \\"\\"

      printHeadline \\"Installing 'or-policy-chaincode' on my-channel1/Org1/peer1\\" \\"U1F60E\\"
      chaincodeInstall \\"cli.org1.example.com\\" \\"peer1.org1.example.com:7042\\" \\"my-channel1\\" \\"or-policy-chaincode\\" \\"$version\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" \\"\\"

      printHeadline \\"Installing 'or-policy-chaincode' on my-channel1/Org2/peer0\\" \\"U1F60E\\"
      chaincodeInstall \\"cli.org2.example.com\\" \\"peer0.org2.example.com:7061\\" \\"my-channel1\\" \\"or-policy-chaincode\\" \\"$version\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" \\"\\"
      printItalics \\"Upgrading as 'Org1'. 'or-policy-chaincode' on channel 'my-channel1'\\" \\"U1F618\\"
      chaincodeUpgrade \\"cli.org1.example.com\\" \\"peer0.org1.example.com:7041\\" \\"my-channel1\\" \\"or-policy-chaincode\\" \\"$version\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" '{\\"Args\\":[]}' \\"OR('Org1MSP.member', 'Org2MSP.member')\\" \\"\\" \\"collections/or-policy-chaincode.json\\"

    else
      echo \\"Warning! Skipping chaincode 'or-policy-chaincode' upgrade. Chaincode directory is empty.\\"
      echo \\"Looked in dir: '$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4'\\"
    fi
  fi
  if [ \\"$chaincodeName\\" = \\"and-policy-chaincode\\" ]; then
    if [ -n \\"$(ls \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4\\")\\" ]; then
      chaincodeBuild \\"and-policy-chaincode\\" \\"node\\" \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4\\"

      printHeadline \\"Installing 'and-policy-chaincode' on my-channel1/Org1/peer0\\" \\"U1F60E\\"
      chaincodeInstall \\"cli.org1.example.com\\" \\"peer0.org1.example.com:7041\\" \\"my-channel1\\" \\"and-policy-chaincode\\" \\"$version\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" \\"\\"

      printHeadline \\"Installing 'and-policy-chaincode' on my-channel1/Org1/peer1\\" \\"U1F60E\\"
      chaincodeInstall \\"cli.org1.example.com\\" \\"peer1.org1.example.com:7042\\" \\"my-channel1\\" \\"and-policy-chaincode\\" \\"$version\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" \\"\\"

      printHeadline \\"Installing 'and-policy-chaincode' on my-channel1/Org2/peer0\\" \\"U1F60E\\"
      chaincodeInstall \\"cli.org2.example.com\\" \\"peer0.org2.example.com:7061\\" \\"my-channel1\\" \\"and-policy-chaincode\\" \\"$version\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" \\"\\"
      printItalics \\"Upgrading as 'Org1'. 'and-policy-chaincode' on channel 'my-channel1'\\" \\"U1F618\\"
      chaincodeUpgrade \\"cli.org1.example.com\\" \\"peer0.org1.example.com:7041\\" \\"my-channel1\\" \\"and-policy-chaincode\\" \\"$version\\" \\"node\\" \\"orderer0.group1.orderer.example.com:7030\\" '{\\"Args\\":[]}' \\"AND('Org1MSP.member', 'Org2MSP.member')\\" \\"\\" \\"collections/and-policy-chaincode.json\\"

    else
      echo \\"Warning! Skipping chaincode 'and-policy-chaincode' upgrade. Chaincode directory is empty.\\"
      echo \\"Looked in dir: '$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4'\\"
    fi
  fi
}

stopNetwork() {
  printHeadline \\"Stopping network\\" \\"U1F68F\\"
  (cd \\"$FABLO_NETWORK_ROOT\\"/fabric-docker && docker-compose stop)
  sleep 4
}

networkDown() {
  printHeadline \\"Destroying network\\" \\"U1F916\\"
  (cd \\"$FABLO_NETWORK_ROOT\\"/fabric-docker && docker-compose down)

  printf \\"\\\\nRemoving chaincode containers & images... \\\\U1F5D1 \\\\n\\"
  docker rm -f $(docker ps -a | grep dev-peer0.org1.example.com-or-policy-chaincode-0.0.1-* | awk '{print $1}') || echo \\"docker rm failed, Check if all fabric dockers properly was deleted\\"
  docker rmi $(docker images dev-peer0.org1.example.com-or-policy-chaincode-0.0.1-* -q) || echo \\"docker rm failed, Check if all fabric dockers properly was deleted\\"
  docker rm -f $(docker ps -a | grep dev-peer1.org1.example.com-or-policy-chaincode-0.0.1-* | awk '{print $1}') || echo \\"docker rm failed, Check if all fabric dockers properly was deleted\\"
  docker rmi $(docker images dev-peer1.org1.example.com-or-policy-chaincode-0.0.1-* -q) || echo \\"docker rm failed, Check if all fabric dockers properly was deleted\\"
  docker rm -f $(docker ps -a | grep dev-peer0.org2.example.com-or-policy-chaincode-0.0.1-* | awk '{print $1}') || echo \\"docker rm failed, Check if all fabric dockers properly was deleted\\"
  docker rmi $(docker images dev-peer0.org2.example.com-or-policy-chaincode-0.0.1-* -q) || echo \\"docker rm failed, Check if all fabric dockers properly was deleted\\"
  docker rm -f $(docker ps -a | grep dev-peer0.org1.example.com-and-policy-chaincode-0.0.1-* | awk '{print $1}') || echo \\"docker rm failed, Check if all fabric dockers properly was deleted\\"
  docker rmi $(docker images dev-peer0.org1.example.com-and-policy-chaincode-0.0.1-* -q) || echo \\"docker rm failed, Check if all fabric dockers properly was deleted\\"
  docker rm -f $(docker ps -a | grep dev-peer1.org1.example.com-and-policy-chaincode-0.0.1-* | awk '{print $1}') || echo \\"docker rm failed, Check if all fabric dockers properly was deleted\\"
  docker rmi $(docker images dev-peer1.org1.example.com-and-policy-chaincode-0.0.1-* -q) || echo \\"docker rm failed, Check if all fabric dockers properly was deleted\\"
  docker rm -f $(docker ps -a | grep dev-peer0.org2.example.com-and-policy-chaincode-0.0.1-* | awk '{print $1}') || echo \\"docker rm failed, Check if all fabric dockers properly was deleted\\"
  docker rmi $(docker images dev-peer0.org2.example.com-and-policy-chaincode-0.0.1-* -q) || echo \\"docker rm failed, Check if all fabric dockers properly was deleted\\"

  printf \\"\\\\nRemoving generated configs... \\\\U1F5D1 \\\\n\\"
  rm -rf \\"$FABLO_NETWORK_ROOT/fabric-config/config\\"
  rm -rf \\"$FABLO_NETWORK_ROOT/fabric-config/crypto-config\\"
  rm -rf \\"$FABLO_NETWORK_ROOT/fabric-config/chaincode-packages\\"

  printHeadline \\"Done! Network was purged\\" \\"U1F5D1\\"
}
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/docker-compose.yaml from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"version: '2.2'

networks:
  basic:

services:

  ca.orderer.example.com:
    container_name: ca.orderer.example.com
    image: hyperledger/fabric-ca:\${FABRIC_CA_VERSION}
    environment:
      - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
      - FABRIC_CA_SERVER_CA_NAME=ca.orderer.example.com
      - FABRIC_CA_SERVER_CA_CERTFILE=/etc/hyperledger/fabric-ca-server/crypto/ca.orderer.example.com-cert.pem
      - FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server/crypto/priv-key.pem
      - FABRIC_LOGGING_SPEC=\${LOGGING_LEVEL}
    ports:
      - 7020:7054
    working_dir: /etc/hyperledger/fabric-ca-server
    command: sh -c 'fabric-ca-server start -b \${ORDERER_CA_ADMIN_NAME}:\${ORDERER_CA_ADMIN_PASSWORD} -d'
    volumes:
      - ../fabric-config/crypto-config/peerOrganizations/orderer.example.com/ca/:/etc/hyperledger/fabric-ca-server/crypto
    networks:
      - basic

  cli.orderer.example.com:
    container_name: cli.orderer.example.com
    image: hyperledger/fabric-tools:\${FABRIC_VERSION}
    tty: true
    environment:
      - GOPATH=/opt/gopath
      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
      - FABRIC_LOGGING_SPEC=\${LOGGING_LEVEL}
      - CORE_PEER_ID=cli.orderer.example.com
      - CORE_CHAINCODE_KEEPALIVE=10
      #
      - CORE_PEER_LOCALMSPID=OrdererMSP
      - CORE_PEER_MSPCONFIGPATH=/var/hyperledger/cli/crypto/users/Admin@orderer.example.com/msp
    working_dir: /var/hyperledger/cli/
    command: /bin/bash
    volumes:
      - /var/run/docker.sock:/host/var/run/docker.sock
      - ../fabric-docker/scripts/cli:/var/hyperledger/cli/scripts/
      - ../fabric-config/config:/var/hyperledger/cli/config/ # genesis.block and channel.tx's
      - ../fabric-config/crypto-config/peerOrganizations/orderer.example.com:/var/hyperledger/cli/crypto/
      - ../fabric-config/chaincode-packages:/var/hyperledger/cli/chaincode-packages/
      - \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4/:/var/hyperledger/cli/or-policy-chaincode/\\"
      - \\"../fabric-config/collections/or-policy-chaincode.json:/var/hyperledger/cli/collections/or-policy-chaincode.json\\"
      - \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4/:/var/hyperledger/cli/and-policy-chaincode/\\"
      - \\"../fabric-config/collections/and-policy-chaincode.json:/var/hyperledger/cli/collections/and-policy-chaincode.json\\"
    networks:
      - basic

  orderer0.group1.orderer.example.com:
    container_name: orderer0.group1.orderer.example.com
    image: hyperledger/fabric-orderer:\${FABRIC_VERSION}
    environment:
      - FABRIC_LOGGING_SPEC=\${LOGGING_LEVEL}
      - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
      - ORDERER_GENERAL_LISTENPORT=7030
      - ORDERER_GENERAL_GENESISMETHOD=file
      - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/config/Group1Genesis.block
      - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
      - ORDERER_GENERAL_LOCALMSPDIR=/var/hyperledger/orderer/msp
      - GODEBUG=netdns=go
    working_dir: /var/hyperledger/orderer
    command: orderer
    ports:
      - 7030:7030
      - 8030:9440
    volumes:
      - ../fabric-config/config/:/var/hyperledger/config
      - ../fabric-config/crypto-config/peerOrganizations/orderer.example.com/peers/orderer0.group1.orderer.example.com/msp/:/var/hyperledger/orderer/msp
      - ../fabric-config/crypto-config/peerOrganizations/orderer.example.com/peers/orderer0.group1.orderer.example.com/tls/:/var/hyperledger/orderer/tls
    networks:
      - basic

  ca.org1.example.com:
    container_name: ca.org1.example.com
    image: hyperledger/fabric-ca:\${FABRIC_CA_VERSION}
    environment:
      - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
      - FABRIC_CA_SERVER_CA_NAME=ca.org1.example.com
      - FABRIC_CA_SERVER_CA_CERTFILE=/etc/hyperledger/fabric-ca-server/crypto/ca.org1.example.com-cert.pem
      - FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server/crypto/priv-key.pem
      - FABRIC_LOGGING_SPEC=\${LOGGING_LEVEL}
    ports:
      - 7040:7054
    working_dir: /etc/hyperledger/fabric-ca-server
    command: sh -c 'fabric-ca-server start -b \${ORG1_CA_ADMIN_NAME}:\${ORG1_CA_ADMIN_PASSWORD} -d'
    volumes:
      - ../fabric-config/crypto-config/peerOrganizations/org1.example.com/ca/:/etc/hyperledger/fabric-ca-server/crypto
    networks:
      - basic

  cli.org1.example.com:
    container_name: cli.org1.example.com
    image: hyperledger/fabric-tools:\${FABRIC_VERSION}
    tty: true
    environment:
      - GOPATH=/opt/gopath
      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
      - FABRIC_LOGGING_SPEC=\${LOGGING_LEVEL}
      - CORE_PEER_ID=cli.org1.example.com
      - CORE_CHAINCODE_KEEPALIVE=10
      #
      - CORE_PEER_LOCALMSPID=Org1MSP
      - CORE_PEER_MSPCONFIGPATH=/var/hyperledger/cli/crypto/users/Admin@org1.example.com/msp
      - CORE_PEER_ADDRESS=peer0.org1.example.com:7041
    working_dir: /var/hyperledger/cli/
    command: /bin/bash
    volumes:
      - /var/run/docker.sock:/host/var/run/docker.sock
      - ../fabric-docker/scripts/cli:/var/hyperledger/cli/scripts/
      - ../fabric-config/config:/var/hyperledger/cli/config/ # genesis.block and channel.tx's
      - ../fabric-config/crypto-config/peerOrganizations/org1.example.com:/var/hyperledger/cli/crypto/
      - ../fabric-config/chaincode-packages:/var/hyperledger/cli/chaincode-packages/
      - \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4/:/var/hyperledger/cli/or-policy-chaincode/\\"
      - \\"../fabric-config/collections/or-policy-chaincode.json:/var/hyperledger/cli/collections/or-policy-chaincode.json\\"
      - \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4/:/var/hyperledger/cli/and-policy-chaincode/\\"
      - \\"../fabric-config/collections/and-policy-chaincode.json:/var/hyperledger/cli/collections/and-policy-chaincode.json\\"
    networks:
      - basic

  peer0.org1.example.com:
    container_name: peer0.org1.example.com
    image: hyperledger/fabric-peer:\${FABRIC_VERSION}
    environment:
      - CORE_PEER_LOCALMSPID=Org1MSP
      - CORE_PEER_ID=peer0.org1.example.com
      - CORE_PEER_ADDRESS=peer0.org1.example.com:7041
      - CORE_PEER_LISTENADDRESS=peer0.org1.example.com:7041
      - CORE_PEER_GOSSIP_ENDPOINT=peer0.org1.example.com:7041
      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.example.com:7041
      - CORE_PEER_GOSSIP_BOOTSTRAP=\\"peer0.org1.example.com:7041 peer1.org1.example.com:7042\\"
      - CORE_PEER_CHAINCODELISTENADDRESS=peer0.org1.example.com:7050
      - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/peer/msp
      - CORE_CHAINCODE_BUILDER=hyperledger/fabric-ccenv:\${FABRIC_CCENV_VERSION}
      - CORE_CHAINCODE_GOLANG_RUNTIME=hyperledger/fabric-baseos:\${FABRIC_BASEOS_VERSION}
      - CORE_CHAINCODE_JAVA_RUNTIME=hyperledger/fabric-javaenv:\${FABRIC_JAVAENV_VERSION}
      #
      - CORE_CHAINCODE_LOGGING_LEVEL=\${LOGGING_LEVEL}
      - CORE_CHAINCODE_LOGGING_SHIM=\${LOGGING_LEVEL}
      - FABRIC_LOGGING_SPEC=\${LOGGING_LEVEL}
      # metrics
      - CORE_OPERATIONS_LISTENADDRESS=peer0.org1.example.com:9440
      - CORE_METRICS_PROVIDER=prometheus
      #
      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=\${COMPOSE_PROJECT_NAME}_basic
      - CORE_VM_DOCKER_ATTACHSTDOUT=true
      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
      - GODEBUG=netdns=go
    working_dir: /etc/hyperledger/fabric/peer/
    command: peer node start
    ports:
      - 8041:9440
      - 7041:7041
    volumes:
      - /var/run/docker.sock:/host/var/run/docker.sock
      - ../fabric-config/crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp:/etc/hyperledger/fabric/peer/msp
      - ../fabric-config/crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls:/etc/hyperledger/fabric/peer/tls
      - ../fabric-config/crypto-config/peerOrganizations/org1.example.com/users:/etc/hyperledger/fabric/peer/msp/users
      - ../fabric-config/config:/etc/hyperledger/fabric/config
    networks:
      - basic

  peer1.org1.example.com:
    container_name: peer1.org1.example.com
    image: hyperledger/fabric-peer:\${FABRIC_VERSION}
    environment:
      - CORE_PEER_LOCALMSPID=Org1MSP
      - CORE_PEER_ID=peer1.org1.example.com
      - CORE_PEER_ADDRESS=peer1.org1.example.com:7042
      - CORE_PEER_LISTENADDRESS=peer1.org1.example.com:7042
      - CORE_PEER_GOSSIP_ENDPOINT=peer1.org1.example.com:7042
      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org1.example.com:7042
      - CORE_PEER_GOSSIP_BOOTSTRAP=\\"peer0.org1.example.com:7041 peer1.org1.example.com:7042\\"
      - CORE_PEER_CHAINCODELISTENADDRESS=peer1.org1.example.com:7050
      - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/peer/msp
      - CORE_CHAINCODE_BUILDER=hyperledger/fabric-ccenv:\${FABRIC_CCENV_VERSION}
      - CORE_CHAINCODE_GOLANG_RUNTIME=hyperledger/fabric-baseos:\${FABRIC_BASEOS_VERSION}
      - CORE_CHAINCODE_JAVA_RUNTIME=hyperledger/fabric-javaenv:\${FABRIC_JAVAENV_VERSION}
      #
      - CORE_CHAINCODE_LOGGING_LEVEL=\${LOGGING_LEVEL}
      - CORE_CHAINCODE_LOGGING_SHIM=\${LOGGING_LEVEL}
      - FABRIC_LOGGING_SPEC=\${LOGGING_LEVEL}
      # metrics
      - CORE_OPERATIONS_LISTENADDRESS=peer1.org1.example.com:9440
      - CORE_METRICS_PROVIDER=prometheus
      #
      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=\${COMPOSE_PROJECT_NAME}_basic
      - CORE_VM_DOCKER_ATTACHSTDOUT=true
      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
      - GODEBUG=netdns=go
    working_dir: /etc/hyperledger/fabric/peer/
    command: peer node start
    ports:
      - 8042:9440
      - 7042:7042
    volumes:
      - /var/run/docker.sock:/host/var/run/docker.sock
      - ../fabric-config/crypto-config/peerOrganizations/org1.example.com/peers/peer1.org1.example.com/msp:/etc/hyperledger/fabric/peer/msp
      - ../fabric-config/crypto-config/peerOrganizations/org1.example.com/peers/peer1.org1.example.com/tls:/etc/hyperledger/fabric/peer/tls
      - ../fabric-config/crypto-config/peerOrganizations/org1.example.com/users:/etc/hyperledger/fabric/peer/msp/users
      - ../fabric-config/config:/etc/hyperledger/fabric/config
    networks:
      - basic

  ca.org2.example.com:
    container_name: ca.org2.example.com
    image: hyperledger/fabric-ca:\${FABRIC_CA_VERSION}
    environment:
      - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
      - FABRIC_CA_SERVER_CA_NAME=ca.org2.example.com
      - FABRIC_CA_SERVER_CA_CERTFILE=/etc/hyperledger/fabric-ca-server/crypto/ca.org2.example.com-cert.pem
      - FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server/crypto/priv-key.pem
      - FABRIC_LOGGING_SPEC=\${LOGGING_LEVEL}
    ports:
      - 7060:7054
    working_dir: /etc/hyperledger/fabric-ca-server
    command: sh -c 'fabric-ca-server start -b \${ORG2_CA_ADMIN_NAME}:\${ORG2_CA_ADMIN_PASSWORD} -d'
    volumes:
      - ../fabric-config/crypto-config/peerOrganizations/org2.example.com/ca/:/etc/hyperledger/fabric-ca-server/crypto
    networks:
      - basic

  cli.org2.example.com:
    container_name: cli.org2.example.com
    image: hyperledger/fabric-tools:\${FABRIC_VERSION}
    tty: true
    environment:
      - GOPATH=/opt/gopath
      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
      - FABRIC_LOGGING_SPEC=\${LOGGING_LEVEL}
      - CORE_PEER_ID=cli.org2.example.com
      - CORE_CHAINCODE_KEEPALIVE=10
      #
      - CORE_PEER_LOCALMSPID=Org2MSP
      - CORE_PEER_MSPCONFIGPATH=/var/hyperledger/cli/crypto/users/Admin@org2.example.com/msp
      - CORE_PEER_ADDRESS=peer0.org2.example.com:7061
    working_dir: /var/hyperledger/cli/
    command: /bin/bash
    volumes:
      - /var/run/docker.sock:/host/var/run/docker.sock
      - ../fabric-docker/scripts/cli:/var/hyperledger/cli/scripts/
      - ../fabric-config/config:/var/hyperledger/cli/config/ # genesis.block and channel.tx's
      - ../fabric-config/crypto-config/peerOrganizations/org2.example.com:/var/hyperledger/cli/crypto/
      - ../fabric-config/chaincode-packages:/var/hyperledger/cli/chaincode-packages/
      - \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4/:/var/hyperledger/cli/or-policy-chaincode/\\"
      - \\"../fabric-config/collections/or-policy-chaincode.json:/var/hyperledger/cli/collections/or-policy-chaincode.json\\"
      - \\"$CHAINCODES_BASE_DIR/./chaincodes/chaincode-kv-node-1.4/:/var/hyperledger/cli/and-policy-chaincode/\\"
      - \\"../fabric-config/collections/and-policy-chaincode.json:/var/hyperledger/cli/collections/and-policy-chaincode.json\\"
    networks:
      - basic

  peer0.org2.example.com:
    container_name: peer0.org2.example.com
    image: hyperledger/fabric-peer:\${FABRIC_VERSION}
    environment:
      - CORE_PEER_LOCALMSPID=Org2MSP
      - CORE_PEER_ID=peer0.org2.example.com
      - CORE_PEER_ADDRESS=peer0.org2.example.com:7061
      - CORE_PEER_LISTENADDRESS=peer0.org2.example.com:7061
      - CORE_PEER_GOSSIP_ENDPOINT=peer0.org2.example.com:7061
      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org2.example.com:7061
      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:7061
      - CORE_PEER_CHAINCODELISTENADDRESS=peer0.org2.example.com:7050
      - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/peer/msp
      - CORE_CHAINCODE_BUILDER=hyperledger/fabric-ccenv:\${FABRIC_CCENV_VERSION}
      - CORE_CHAINCODE_GOLANG_RUNTIME=hyperledger/fabric-baseos:\${FABRIC_BASEOS_VERSION}
      - CORE_CHAINCODE_JAVA_RUNTIME=hyperledger/fabric-javaenv:\${FABRIC_JAVAENV_VERSION}
      #
      - CORE_CHAINCODE_LOGGING_LEVEL=\${LOGGING_LEVEL}
      - CORE_CHAINCODE_LOGGING_SHIM=\${LOGGING_LEVEL}
      - FABRIC_LOGGING_SPEC=\${LOGGING_LEVEL}
      # metrics
      - CORE_OPERATIONS_LISTENADDRESS=peer0.org2.example.com:9440
      - CORE_METRICS_PROVIDER=prometheus
      #
      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=\${COMPOSE_PROJECT_NAME}_basic
      - CORE_VM_DOCKER_ATTACHSTDOUT=true
      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
      - GODEBUG=netdns=go
    working_dir: /etc/hyperledger/fabric/peer/
    command: peer node start
    ports:
      - 8061:9440
      - 7061:7061
    volumes:
      - /var/run/docker.sock:/host/var/run/docker.sock
      - ../fabric-config/crypto-config/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/msp:/etc/hyperledger/fabric/peer/msp
      - ../fabric-config/crypto-config/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/tls:/etc/hyperledger/fabric/peer/tls
      - ../fabric-config/crypto-config/peerOrganizations/org2.example.com/users:/etc/hyperledger/fabric/peer/msp/users
      - ../fabric-config/config:/etc/hyperledger/fabric/config
    networks:
      - basic
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/scripts/base-functions.sh from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"#!/usr/bin/env bash

certsGenerate() {
  local CONTAINER_NAME=certsGenerate

  local CONFIG_PATH=$1
  local CRYPTO_CONFIG_FILE_NAME=$2
  local ORG_PATH=$3
  local OUTPUT_PATH=$4
  local FULL_CERT_PATH=$OUTPUT_PATH$ORG_PATH

  echo \\"Generating certs...\\"
  inputLog \\"CONFIG_PATH: $CONFIG_PATH\\"
  inputLog \\"CRYPTO_CONFIG_FILE_NAME: $CRYPTO_CONFIG_FILE_NAME\\"
  inputLog \\"ORG_PATH: $ORG_PATH\\"
  inputLog \\"OUTPUT_PATH: $OUTPUT_PATH\\"
  inputLog \\"FULL_CERT_PATH: $FULL_CERT_PATH\\"

  if [ -d \\"$FULL_CERT_PATH\\" ]; then
    echo \\"Can't generate certs, directory already exists : $FULL_CERT_PATH\\"
    echo \\"Try using 'reset' or 'down' to remove whole network or 'start' to reuse it\\"
    exit 1
  fi

  docker run -i -d -w=\\"/\\" --name $CONTAINER_NAME hyperledger/fabric-tools:\\"\${FABRIC_VERSION}\\" bash || removeContainer $CONTAINER_NAME
  docker cp \\"$CONFIG_PATH\\" $CONTAINER_NAME:/fabric-config || removeContainer $CONTAINER_NAME

  docker exec -i $CONTAINER_NAME cryptogen generate --config=./fabric-config/\\"$CRYPTO_CONFIG_FILE_NAME\\" || removeContainer $CONTAINER_NAME

  docker cp $CONTAINER_NAME:/crypto-config/. \\"$OUTPUT_PATH\\" || removeContainer $CONTAINER_NAME

  removeContainer $CONTAINER_NAME

  # shellcheck disable=2044
  for file in $(find \\"$OUTPUT_PATH\\"/ -iname '*_sk'); do
    dir=$(dirname \\"$file\\")
    mv \\"\${dir}\\"/*_sk \\"\${dir}\\"/priv-key.pem
  done
}

genesisBlockCreate() {
  local CONTAINER_NAME=genesisBlockCreate

  local CONFIG_PATH=$1
  local OUTPUT_PATH=$2
  local GENESIS_PROFILE_NAME=$3
  local GENESIS_FILE_NAME=$GENESIS_PROFILE_NAME.block

  echo \\"Creating genesis block...\\"
  inputLog \\"CONFIG_PATH: $CONFIG_PATH\\"
  inputLog \\"OUTPUT_PATH: $OUTPUT_PATH\\"
  inputLog \\"GENESIS_PROFILE_NAME: $GENESIS_PROFILE_NAME\\"
  inputLog \\"GENESIS_FILE_NAME: $GENESIS_FILE_NAME\\"

  if [ -f \\"$OUTPUT_PATH/$GENESIS_FILE_NAME\\" ]; then
    echo \\"Cant't generate genesis block, file already exists: $OUTPUT_PATH/$GENESIS_FILE_NAME\\"
    echo \\"Try using 'reset' or 'down' to remove whole network or 'start' to reuse it\\"
    exit 1
  fi

  docker run -i -d -w=\\"/\\" --name $CONTAINER_NAME hyperledger/fabric-tools:\\"\${FABRIC_VERSION}\\" bash || removeContainer $CONTAINER_NAME
  docker cp \\"$CONFIG_PATH\\" $CONTAINER_NAME:/fabric-config || removeContainer $CONTAINER_NAME

  docker exec -i $CONTAINER_NAME mkdir /config || removeContainer $CONTAINER_NAME
  docker exec -i $CONTAINER_NAME configtxgen --configPath ./fabric-config -profile \\"$GENESIS_PROFILE_NAME\\" -outputBlock \\"./config/$GENESIS_FILE_NAME\\" -channelID system-channel || removeContainer $CONTAINER_NAME

  mkdir -p \\"$OUTPUT_PATH\\"
  docker cp \\"$CONTAINER_NAME:/config/$GENESIS_FILE_NAME\\" \\"$OUTPUT_PATH/$GENESIS_FILE_NAME\\" || removeContainer $CONTAINER_NAME

  removeContainer $CONTAINER_NAME
}

createChannelTx() {
  local CONTAINER_NAME=createChannelTx

  local CHANNEL_NAME=$1
  local CONFIG_PATH=$2
  local CONFIG_PROFILE=$3
  local OUTPUT_PATH=$4
  local CHANNEL_TX_PATH=\\"$OUTPUT_PATH/$CHANNEL_NAME\\".tx

  echo \\"Creating channelTx for $CHANNEL_NAME...\\"
  inputLog \\"CONFIG_PATH: $CONFIG_PATH\\"
  inputLog \\"CONFIG_PROFILE: $CONFIG_PROFILE\\"
  inputLog \\"OUTPUT_PATH: $OUTPUT_PATH\\"
  inputLog \\"CHANNEL_TX_PATH: $CHANNEL_TX_PATH\\"

  if [ -f \\"$CHANNEL_TX_PATH\\" ]; then
    echo \\"Can't create channel configuration, it already exists : $CHANNEL_TX_PATH\\"
    echo \\"Try using 'reset' or 'down' to remove whole network or 'start' to reuse it\\"
    exit 1
  fi

  docker run -i -d -w=\\"/\\" --name $CONTAINER_NAME hyperledger/fabric-tools:\\"\${FABRIC_VERSION}\\" bash || removeContainer $CONTAINER_NAME
  docker cp \\"$CONFIG_PATH\\" $CONTAINER_NAME:/fabric-config || removeContainer $CONTAINER_NAME

  docker exec -i $CONTAINER_NAME mkdir /config || removeContainer $CONTAINER_NAME
  docker exec -i $CONTAINER_NAME configtxgen --configPath ./fabric-config -profile \\"\${CONFIG_PROFILE}\\" -outputCreateChannelTx ./config/channel.tx -channelID \\"\${CHANNEL_NAME}\\" || removeContainer $CONTAINER_NAME

  docker cp $CONTAINER_NAME:/config/channel.tx \\"$CHANNEL_TX_PATH\\" || removeContainer $CONTAINER_NAME

  removeContainer $CONTAINER_NAME
}

createNewChannelUpdateTx() {
  local CONTAINER_NAME=createAnchorPeerUpdateTx

  local CHANNEL_NAME=$1
  local MSP_NAME=$2
  local CONFIG_PROFILE=$3
  local CONFIG_PATH=$4
  local OUTPUT_PATH=$5
  local ANCHOR_PEER_UPDATE_PATH=\\"$OUTPUT_PATH/\${MSP_NAME}anchors-$CHANNEL_NAME.tx\\"

  echo \\"Creating new channel config block. Channel: $CHANNEL_NAME for organization $MSP_NAME...\\"
  inputLog \\"CHANNEL_NAME: $CHANNEL_NAME\\"
  inputLog \\"MSP_NAME: $MSP_NAME\\"
  inputLog \\"CONFIG_PROFILE: $CONFIG_PROFILE\\"
  inputLog \\"CONFIG_PATH: $CONFIG_PATH\\"
  inputLog \\"OUTPUT_PATH: $OUTPUT_PATH\\"
  inputLog \\"ANCHOR_PEER_UPDATE_PATH: $ANCHOR_PEER_UPDATE_PATH\\"

  if [ -f \\"$ANCHOR_PEER_UPDATE_PATH\\" ]; then
    echo \\"Cant't create anchor peer update, it already exists : $ANCHOR_PEER_UPDATE_PATH\\"
    echo \\"Try using 'reset' or 'down' to remove whole network or 'start' to reuse it\\"
    exit 1
  fi

  docker run -i -d -w=\\"/\\" --name $CONTAINER_NAME hyperledger/fabric-tools:\\"\${FABRIC_VERSION}\\" bash || removeContainer $CONTAINER_NAME
  docker cp \\"$CONFIG_PATH\\" $CONTAINER_NAME:/fabric-config || removeContainer $CONTAINER_NAME

  docker exec -i $CONTAINER_NAME mkdir /config || removeContainer $CONTAINER_NAME
  docker exec -i $CONTAINER_NAME configtxgen \\\\
    --configPath ./fabric-config \\\\
    -profile \\"\${CONFIG_PROFILE}\\" \\\\
    -outputAnchorPeersUpdate ./config/\\"\${MSP_NAME}\\"anchors.tx \\\\
    -channelID \\"\${CHANNEL_NAME}\\" \\\\
    -asOrg \\"\${MSP_NAME}\\" || removeContainer $CONTAINER_NAME

  docker cp $CONTAINER_NAME:/config/\\"\${MSP_NAME}\\"anchors.tx \\"$ANCHOR_PEER_UPDATE_PATH\\" || removeContainer $CONTAINER_NAME

  removeContainer $CONTAINER_NAME
}

notifyOrgAboutNewChannel() {
  local CHANNEL_NAME=$1
  local MSP_NAME=$2
  local CLI_NAME=$3
  local PEER_ADDRESS=$4
  local ORDERER_URL=$5
  local ANCHOR_PEER_UPDATE_PATH=\\"/var/hyperledger/cli/config/\${MSP_NAME}anchors-$CHANNEL_NAME.tx\\"

  echo \\"Updating channel $CHANNEL_NAME for organization $MSP_NAME...\\"
  inputLog \\"CHANNEL_NAME: $CHANNEL_NAME\\"
  inputLog \\"MSP_NAME: $MSP_NAME\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"
  inputLog \\"ORDERER_URL: $ORDERER_URL\\"
  inputLog \\"ANCHOR_PEER_UPDATE_PATH: $ANCHOR_PEER_UPDATE_PATH\\"

  if [ -n \\"$ANCHOR_PEER_UPDATE_PATH\\" ]; then
    docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
      \\"$CLI_NAME\\" peer channel update \\\\
      -c \\"$CHANNEL_NAME\\" \\\\
      -o \\"$ORDERER_URL\\" \\\\
      -f \\"$ANCHOR_PEER_UPDATE_PATH\\"
  else
    echo \\"channel update tx not found! Looked for: $ANCHOR_PEER_UPDATE_PATH\\"
  fi
}

notifyOrgAboutNewChannelTls() {
  local CHANNEL_NAME=$1
  local MSP_NAME=$2
  local CLI_NAME=$3
  local PEER_ADDRESS=$4
  local ORDERER_URL=$5
  local ANCHOR_PEER_UPDATE_PATH=\\"/var/hyperledger/cli/config/\${MSP_NAME}anchors-$CHANNEL_NAME.tx\\"
  local CA_CERT=\\"/var/hyperledger/cli/\\"\${6}

  echo \\"Updating channel $CHANNEL_NAME for organization $MSP_NAME (TLS)...\\"
  inputLog \\"CHANNEL_NAME: $CHANNEL_NAME\\"
  inputLog \\"MSP_NAME: $MSP_NAME\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"
  inputLog \\"ORDERER_URL: $ORDERER_URL\\"
  inputLog \\"ANCHOR_PEER_UPDATE_PATH: $ANCHOR_PEER_UPDATE_PATH\\"

  if [ -n \\"$ANCHOR_PEER_UPDATE_PATH\\" ]; then
    docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
      \\"$CLI_NAME\\" peer channel update \\\\
      -c \\"$CHANNEL_NAME\\" \\\\
      -o \\"$ORDERER_URL\\" \\\\
      -f \\"$ANCHOR_PEER_UPDATE_PATH\\" \\\\
      --tls --cafile \\"$CA_CERT\\"
  else
    echo \\"channel update tx not found! Looked for: $ANCHOR_PEER_UPDATE_PATH\\"
  fi
}

deleteNewChannelUpdateTx() {
  local CHANNEL_NAME=$1
  local MSP_NAME=$2
  local CLI_NAME=$3
  local ANCHOR_PEER_UPDATE_PATH=\\"/var/hyperledger/cli/config/\${MSP_NAME}anchors-$CHANNEL_NAME.tx\\"

  echo \\"Deleting new channel config block. Channel: $CHANNEL_NAME, Organization: $MSP_NAME\\"
  inputLogShort \\"CHANNEL_NAME: $CHANNEL_NAME, MSP_NAME: $MSP_NAME, CLI_NAME: $CLI_NAME, ANCHOR_PEER_UPDATE_PATH: $ANCHOR_PEER_UPDATE_PATH\\"

  if [ -n \\"$ANCHOR_PEER_UPDATE_PATH\\" ]; then
    docker exec \\"$CLI_NAME\\" rm \\"$ANCHOR_PEER_UPDATE_PATH\\"
  else
    echo \\"channel update tx not found! Looked for: $ANCHOR_PEER_UPDATE_PATH\\"
  fi
}

printHeadline() {
  bold=$'\\\\e[1m'
  end=$'\\\\e[0m'

  TEXT=$1
  EMOJI=$2
  printf \\"\${bold}============ %b %s %b ==============\${end}\\\\n\\" \\"\\\\\\\\$EMOJI\\" \\"$TEXT\\" \\"\\\\\\\\$EMOJI\\"
}

printItalics() {
  italics=$'\\\\e[3m'
  end=$'\\\\e[0m'

  TEXT=$1
  EMOJI=$2
  printf \\"\${italics}==== %b %s %b ====\${end}\\\\n\\" \\"\\\\\\\\$EMOJI\\" \\"$TEXT\\" \\"\\\\\\\\$EMOJI\\"
}

inputLog() {
  end=$'\\\\e[0m'
  darkGray=$'\\\\e[90m'

  echo \\"\${darkGray}   $1 \${end}\\"
}

inputLogShort() {
  end=$'\\\\e[0m'
  darkGray=$'\\\\e[90m'

  echo \\"\${darkGray}   $1 \${end}\\"
}

certsRemove() {
  local CERTS_DIR_PATH=$1
  rm -rf \\"$CERTS_DIR_PATH\\"
}

removeContainer() {
  CONTAINER_NAME=$1
  docker rm -f \\"$CONTAINER_NAME\\"
}
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/scripts/base-help.sh from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"#!/usr/bin/env bash

printHelp() {
  echo \\"Fablo is powered by SoftwareMill\\"

  echo \\"\\"
  echo \\"usage: ./fabric-docker.sh <command>\\"
  echo \\"\\"

  echo \\"Commands: \\"
  echo \\"\\"
  echo \\"./fabric-docker.sh up\\"
  echo -e \\"\\\\t Use for first run. Creates all needed artifacts (certs, genesis block) and starts network for the first time.\\"
  echo -e \\"\\\\t After 'up' commands start/stop are used to manage network and rerun to rerun it\\"
  echo \\"\\"
  echo \\"./fabric-docker.sh down\\"
  echo -e \\"\\\\t Back to empty state - destorys created containers, prunes generated certificates, configs.\\"
  echo \\"\\"
  echo \\"./fabric-docker.sh start\\"
  echo -e \\"\\\\t Starts already created network.\\"
  echo \\"\\"
  echo \\"./fabric-docker.sh stop\\"
  echo -e \\"\\\\t Stops already running network.\\"
  echo \\"\\"
  echo \\"./fabric-docker.sh reset\\"
  echo -e \\"\\\\t Fresh start - it destroys whole network, certs, configs and then reruns everything.\\"
  echo \\"\\"
  echo \\"./fabric-docker.sh channel --help\\"
  echo -e \\"\\\\t Detailed help for channel management scripts.\\"
  echo \\"\\"
}
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/scripts/chaincode-functions.sh from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"#!/usr/bin/env bash
# phrase \\"\${CA_CERT_PARAMS[@]+\\"\${CA_CERT_PARAMS[@]}\\"}\\" is needed in older bash versions ( <4 ) for array expansion.
# see: https://stackoverflow.com/questions/7577052/bash-empty-array-expansion-with-set-u

chaincodeBuild() {
  local CHAINCODE_NAME=$1
  local CHAINCODE_LANG=$2
  local CHAINCODE_DIR_PATH=$3

  mkdir -p \\"$CHAINCODE_DIR_PATH\\"

  if [ \\"$CHAINCODE_LANG\\" = \\"node\\" ]; then
    NODE_VERSION=\\"$(node --version)\\"
    RECOMMENDED_NODE_VERSION=\\"12\\"

    USES_OLD_FABRIC_SHIM=\\"$(jq '.dependencies.\\"fabric-shim\\" | contains(\\"1.4.\\")' \\"$CHAINCODE_DIR_PATH/package.json\\")\\"
    if [ \\"$USES_OLD_FABRIC_SHIM\\" == \\"true\\" ]; then
      RECOMMENDED_NODE_VERSION=\\"8.9\\"
    fi

    if ! echo \\"$NODE_VERSION\\" | grep -q \\"v$RECOMMENDED_NODE_VERSION\\"; then
      echo \\"Warning: Your Node.js version is $NODE_VERSION, but recommended is $RECOMMENDED_NODE_VERSION)\\"
      echo \\"See: https://github.com/hyperledger/fabric-chaincode-node/blob/main/COMPATIBILITY.md\\"
    fi

    echo \\"Buiding chaincode '$CHAINCODE_NAME'...\\"
    inputLog \\"CHAINCODE_NAME: $CHAINCODE_NAME\\"
    inputLog \\"CHAINCODE_LANG: $CHAINCODE_LANG\\"
    inputLog \\"CHAINCODE_DIR_PATH: $CHAINCODE_DIR_PATH\\"
    inputLog \\"NODE_VERSION: $NODE_VERSION (recommended: $RECOMMENDED_NODE_VERSION)\\"

    # We have different commands for npm and yarn
    if [ -f \\"$CHAINCODE_DIR_PATH/yarn.lock\\" ]; then
      (cd \\"$CHAINCODE_DIR_PATH\\" && npm install --silent -g yarn && yarn install --silent && yarn build)
    else
      (cd \\"$CHAINCODE_DIR_PATH\\" && npm install --silent && npm run build)
    fi
  fi
}

chaincodeInstall() {
  local CLI_NAME=$1
  local PEER_ADDRESS=$2
  local CHANNEL_NAME=$3
  local CHAINCODE_NAME=$4
  local CHAINCODE_VERSION=$5
  local CHAINCODE_LANG=$6
  local ORDERER_URL=$7
  local CA_CERT=$8

  echo \\"Installing chaincode on $CHANNEL_NAME...\\"
  inputLog \\"CHAINCODE_NAME: $CHAINCODE_NAME\\"
  inputLog \\"CHAINCODE_VERSION: $CHAINCODE_VERSION\\"
  inputLog \\"CHAINCODE_LANG: $CHAINCODE_LANG\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"
  inputLog \\"ORDERER_URL: $ORDERER_URL\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"CA_CERT: $CA_CERT\\"

  local CA_CERT_PARAMS=()
  if [ -n \\"$CA_CERT\\" ]; then
    CA_CERT_PARAMS=(--tls --cafile \\"/var/hyperledger/cli/$CA_CERT\\")
  fi

  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" -e CHANNEL_NAME=\\"$CHANNEL_NAME\\" \\"$CLI_NAME\\" peer chaincode install \\\\
    -n \\"$CHAINCODE_NAME\\" \\\\
    -v \\"$CHAINCODE_VERSION\\" \\\\
    -l \\"$CHAINCODE_LANG\\" \\\\
    -p \\"/var/hyperledger/cli/$CHAINCODE_NAME/\\" \\\\
    -o \\"$ORDERER_URL\\" \\\\
    \\"\${CA_CERT_PARAMS[@]+\\"\${CA_CERT_PARAMS[@]}\\"}\\"
}

chaincodeInstantiate() {
  local CLI_NAME=$1
  local PEER_ADDRESS=$2
  local CHANNEL_NAME=$3
  local CHAINCODE_NAME=$4
  local CHAINCODE_VERSION=$5
  local CHAINCODE_LANG=$6
  local ORDERER_URL=$7
  local INIT_PARAMS=$8
  local ENDORSEMENT=$9
  local CA_CERT=\${10}
  local COLLECTIONS_CONFIG=\${11}

  echo \\"Instantiating chaincode on $CHANNEL_NAME...\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"
  inputLog \\"CHAINCODE_NAME: $CHAINCODE_NAME\\"
  inputLog \\"CHAINCODE_VERSION: $CHAINCODE_VERSION\\"
  inputLog \\"CHAINCODE_LANG: $CHAINCODE_LANG\\"
  inputLog \\"COLLECTIONS_CONFIG: $COLLECTIONS_CONFIG\\"
  inputLog \\"INIT_PARAMS: $INIT_PARAMS\\"
  inputLog \\"ENDORSEMENT: $ENDORSEMENT\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"
  inputLog \\"ORDERER_URL: $ORDERER_URL\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"CA_CERT: $CA_CERT\\"

  local CA_CERT_PARAMS=()
  if [ -n \\"$CA_CERT\\" ]; then
    CA_CERT_PARAMS=(--tls --cafile \\"/var/hyperledger/cli/$CA_CERT\\")
  fi

  local COLLECTIONS_CONFIG_PARAMS=()
  if [ -n \\"$COLLECTIONS_CONFIG\\" ]; then
    COLLECTIONS_CONFIG_PARAMS=(--collections-config \\"$COLLECTIONS_CONFIG\\")
  fi

  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\"$CLI_NAME\\" peer chaincode instantiate \\\\
    -C \\"$CHANNEL_NAME\\" \\\\
    -n \\"$CHAINCODE_NAME\\" \\\\
    -v \\"$CHAINCODE_VERSION\\" \\\\
    -l \\"$CHAINCODE_LANG\\" \\\\
    -o \\"$ORDERER_URL\\" \\\\
    -c \\"$INIT_PARAMS\\" \\\\
    -P \\"$ENDORSEMENT\\" \\\\
    \\"\${COLLECTIONS_CONFIG_PARAMS[@]+\\"\${COLLECTIONS_CONFIG_PARAMS[@]}\\"}\\" \\\\
    \\"\${CA_CERT_PARAMS[@]+\\"\${CA_CERT_PARAMS[@]}\\"}\\"
}

chaincodeUpgrade() {
  local CLI_NAME=$1
  local PEER_ADDRESS=$2
  local CHANNEL_NAME=$3
  local CHAINCODE_NAME=$4
  local CHAINCODE_VERSION=$5
  local CHAINCODE_LANG=$6
  local ORDERER_URL=$7
  local INIT_PARAMS=$8
  local ENDORSEMENT=$9
  local CA_CERT=\${10}
  local COLLECTIONS_CONFIG=\${11}

  echo \\"Upgrading chaincode on $CHANNEL_NAME...\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"
  inputLog \\"CHAINCODE_NAME: $CHAINCODE_NAME\\"
  inputLog \\"CHAINCODE_VERSION: $CHAINCODE_VERSION\\"
  inputLog \\"CHAINCODE_LANG: $CHAINCODE_LANG\\"
  inputLog \\"COLLECTIONS_CONFIG: $COLLECTIONS_CONFIG\\"
  inputLog \\"INIT_PARAMS: $INIT_PARAMS\\"
  inputLog \\"ENDORSEMENT: $ENDORSEMENT\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"
  inputLog \\"ORDERER_URL: $ORDERER_URL\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"CA_CERT: $CA_CERT\\"

  local CA_CERT_PARAMS=()
  if [ -n \\"$CA_CERT\\" ]; then
    CA_CERT_PARAMS=(--tls --cafile \\"/var/hyperledger/cli/$CA_CERT\\")
  fi

  local COLLECTIONS_CONFIG_PARAMS=()
  if [ -n \\"$COLLECTIONS_CONFIG\\" ]; then
    COLLECTIONS_CONFIG_PARAMS=(--collections-config \\"$COLLECTIONS_CONFIG\\")
  fi

  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\"$CLI_NAME\\" peer chaincode upgrade \\\\
    -C \\"$CHANNEL_NAME\\" \\\\
    -n \\"$CHAINCODE_NAME\\" \\\\
    -v \\"$CHAINCODE_VERSION\\" \\\\
    -l \\"$CHAINCODE_LANG\\" \\\\
    -p /var/hyperledger/cli/\\"$CHAINCODE_NAME\\"/ \\\\
    -o \\"$ORDERER_URL\\" \\\\
    -c \\"$INIT_PARAMS\\" \\\\
    -P \\"$ENDORSEMENT\\" \\\\
    \\"\${COLLECTIONS_CONFIG_PARAMS[@]+\\"\${COLLECTIONS_CONFIG_PARAMS[@]}\\"}\\" \\\\
    \\"\${CA_CERT_PARAMS[@]+\\"\${CA_CERT_PARAMS[@]}\\"}\\"
}
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/scripts/channel-query-functions.sh from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"#!/usr/bin/env bash

peerChannelList() {
  local CLI_NAME=$1
  local PEER_ADDRESS=$2

  echo \\"Listing channels using $CLI_NAME using peer $PEER_ADDRESS...\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"

  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\"$CLI_NAME\\" peer channel list
}

peerChannelGetInfo() {
  local CHANNEL_NAME=$1
  local CLI_NAME=$2
  local PEER_ADDRESS=$3

  echo \\"Getting info about $CHANNEL_NAME using peer $PEER_ADDRESS...\\"
  inputLog \\"CHANNEL_NAME: $CHANNEL_NAME\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"

  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\"$CLI_NAME\\" peer channel getinfo \\\\
    -c \\"$CHANNEL_NAME\\"
}

peerChannelFetchConfig() {
  local CHANNEL_NAME=$1
  local CLI_NAME=$2
  local CONFIG_FILE_NAME=$3
  local PEER_ADDRESS=$4

  echo \\"Fetching config block from $CHANNEL_NAME using peer $PEER_ADDRESS...\\"
  inputLog \\"CHANNEL_NAME: $CHANNEL_NAME\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"CONFIG_FILE_NAME: $CONFIG_FILE_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"

  docker exec \\"$CLI_NAME\\" mkdir -p /tmp/hyperledger/assets/
  docker exec \\\\
    -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" peer channel fetch config /tmp/hyperledger/assets/config_block_before.pb \\\\
    -c \\"$CHANNEL_NAME\\"

  docker exec \\"$CLI_NAME\\" chmod 777 /tmp/hyperledger/assets/config_block_before.pb
  docker exec \\\\
    -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" configtxlator proto_decode \\\\
    --input /tmp/hyperledger/assets/config_block_before.pb \\\\
    --type common.Block |
    jq .data.data[0].payload.data.config >\\"$CONFIG_FILE_NAME\\"

  docker exec \\"$CLI_NAME\\" rm -rf /tmp/hyperledger/assets/
}

peerChannelFetchLastBlock() {
  local CHANNEL_NAME=$1
  local CLI_NAME=$2
  local BLOCK_FILE_NAME=$3
  local PEER_ADDRESS=$4

  echo \\"Fetching last block from $CHANNEL_NAME using peer $PEER_ADDRESS...\\"
  inputLog \\"CHANNEL_NAME: $CHANNEL_NAME\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"BLOCK_FILE_NAME: $BLOCK_FILE_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"

  docker exec \\"$CLI_NAME\\" mkdir -p /tmp/hyperledger/blocks/
  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" peer channel fetch newest /tmp/hyperledger/blocks/newest.block \\\\
    -c \\"$CHANNEL_NAME\\"
  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" configtxlator proto_decode \\\\
    --input /tmp/hyperledger/blocks/newest.block \\\\
    --type common.Block |
    jq .data.data[0].payload.data.config >\\"$BLOCK_FILE_NAME\\"

  docker exec \\"$CLI_NAME\\" rm -rf /tmp/hyperledger/assets/
}

peerChannelFetchFirstBlock() {
  local CHANNEL_NAME=$1
  local CLI_NAME=$2
  local BLOCK_FILE_NAME=$3
  local PEER_ADDRESS=$4

  echo \\"Fetching first block from $CHANNEL_NAME using peer $PEER_ADDRESS...\\"
  inputLog \\"CHANNEL_NAME: $CHANNEL_NAME\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"BLOCK_FILE_NAME: $BLOCK_FILE_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"

  docker exec \\"$CLI_NAME\\" mkdir -p /tmp/hyperledger/blocks/
  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" peer channel fetch oldest /tmp/hyperledger/blocks/oldest.block \\\\
    -c \\"$CHANNEL_NAME\\"
  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" configtxlator proto_decode \\\\
    --input /tmp/hyperledger/blocks/oldest.block \\\\
    --type common.Block |
    jq .data.data[0].payload.data.config >\\"$BLOCK_FILE_NAME\\"

  docker exec \\"$CLI_NAME\\" rm -rf /tmp/hyperledger/assets/
}

peerChannelFetchBlock() {
  local CHANNEL_NAME=$1
  local CLI_NAME=$2
  local BLOCK_FILE_NAME=$3
  local BLOCK_NUMBER=$4
  local PEER_ADDRESS=$5

  echo \\"Fetching first block from $CHANNEL_NAME using peer $PEER_ADDRESS...\\"
  inputLog \\"CHANNEL_NAME: $CHANNEL_NAME\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"BLOCK_FILE_NAME: $BLOCK_FILE_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"

  docker exec \\"$CLI_NAME\\" mkdir -p /tmp/hyperledger/blocks/
  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" peer channel fetch oldest /tmp/hyperledger/blocks/oldest.block \\\\
    -c \\"$CHANNEL_NAME\\"
  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" configtxlator proto_decode \\\\
    --input /tmp/hyperledger/blocks/oldest.block \\\\
    --type common.Block |
    jq .data.data[0].payload.data.config >\\"$BLOCK_FILE_NAME\\"

  docker exec \\"$CLI_NAME\\" rm -rf /tmp/hyperledger/assets/
}

#=== TLS equivalents =========================================================

peerChannelListTls() {
  local CLI_NAME=$1
  local PEER_ADDRESS=$2
  local CA_CERT=$3

  echo \\"Listing channels using $CLI_NAME using peer $PEER_ADDRESS (TLS)...\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"

  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\"$CLI_NAME\\" peer channel list --tls --cafile \\"$CA_CERT\\"
}

peerChannelGetInfoTls() {
  local CHANNEL_NAME=$1
  local CLI_NAME=$2
  local PEER_ADDRESS=$3
  local CA_CERT=$4

  echo \\"Getting info about $CHANNEL_NAME using peer $PEER_ADDRESS (TLS)...\\"
  inputLog \\"CHANNEL_NAME: $CHANNEL_NAME\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"

  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\"$CLI_NAME\\" peer channel getinfo \\\\
    -c \\"$CHANNEL_NAME\\" --tls --cafile \\"$CA_CERT\\"
}

peerChannelFetchConfigTls() {
  local CHANNEL_NAME=$1
  local CLI_NAME=$2
  local CONFIG_FILE_NAME=$3
  local PEER_ADDRESS=$4
  local CA_CERT=$5

  echo \\"Fetching config block from $CHANNEL_NAME using peer $PEER_ADDRESS (TLS)...\\"
  inputLog \\"CHANNEL_NAME: $CHANNEL_NAME\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"CONFIG_FILE_NAME: $CONFIG_FILE_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"

  docker exec \\"$CLI_NAME\\" mkdir -p /tmp/hyperledger/assets/
  docker exec \\\\
    -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" peer channel fetch config /tmp/hyperledger/assets/config_block_before.pb \\\\
    -c \\"$CHANNEL_NAME\\" --tls --cafile \\"$CA_CERT\\"

  docker exec \\"$CLI_NAME\\" chmod 777 /tmp/hyperledger/assets/config_block_before.pb
  docker exec \\\\
    -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" configtxlator proto_decode \\\\
    --input /tmp/hyperledger/assets/config_block_before.pb \\\\
    --type common.Block |
    jq .data.data[0].payload.data.config >\\"$CONFIG_FILE_NAME\\"

  docker exec \\"$CLI_NAME\\" rm -rf /tmp/hyperledger/assets/
}

peerChannelFetchLastBlockTls() {
  local CHANNEL_NAME=$1
  local CLI_NAME=$2
  local BLOCK_FILE_NAME=$3
  local PEER_ADDRESS=$4
  local CA_CERT=$5

  echo \\"Fetching last block from $CHANNEL_NAME using peer $PEER_ADDRESS (TLS)...\\"
  inputLog \\"CHANNEL_NAME: $CHANNEL_NAME\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"BLOCK_FILE_NAME: $BLOCK_FILE_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"

  docker exec \\"$CLI_NAME\\" mkdir -p /tmp/hyperledger/blocks/
  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" peer channel fetch newest /tmp/hyperledger/blocks/newest.block \\\\
    -c \\"$CHANNEL_NAME\\" --tls --cafile \\"$CA_CERT\\"
  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" configtxlator proto_decode \\\\
    --input /tmp/hyperledger/blocks/newest.block \\\\
    --type common.Block |
    jq .data.data[0].payload.data.config >\\"$BLOCK_FILE_NAME\\"

  docker exec \\"$CLI_NAME\\" rm -rf /tmp/hyperledger/assets/
}

peerChannelFetchFirstBlockTls() {
  local CHANNEL_NAME=$1
  local CLI_NAME=$2
  local BLOCK_FILE_NAME=$3
  local PEER_ADDRESS=$4
  local CA_CERT=$5

  echo \\"Fetching first block from $CHANNEL_NAME using peer $PEER_ADDRESS (TLS)...\\"
  inputLog \\"CHANNEL_NAME: $CHANNEL_NAME\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"BLOCK_FILE_NAME: $BLOCK_FILE_NAME\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"

  docker exec \\"$CLI_NAME\\" mkdir -p /tmp/hyperledger/blocks/
  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" peer channel fetch oldest /tmp/hyperledger/blocks/oldest.block \\\\
    -c \\"$CHANNEL_NAME\\" --tls --cafile \\"$CA_CERT\\"
  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" configtxlator proto_decode \\\\
    --input /tmp/hyperledger/blocks/oldest.block \\\\
    --type common.Block |
    jq .data.data[0].payload.data.config >\\"$BLOCK_FILE_NAME\\"

  docker exec \\"$CLI_NAME\\" rm -rf /tmp/hyperledger/assets/1
}

peerChannelFetchBlockTls() {
  local CHANNEL_NAME=$1
  local CLI_NAME=$2
  local BLOCK_FILE_NAME=$3
  local BLOCK_NUMBER=$4
  local PEER_ADDRESS=$5

  echo \\"Fetching first block from $CHANNEL_NAME using peer $PEER_ADDRESS...\\"
  inputLog \\"CHANNEL_NAME: $CHANNEL_NAME\\"
  inputLog \\"CLI_NAME: $CLI_NAME\\"
  inputLog \\"BLOCK_FILE_NAME: $BLOCK_FILE_NAME\\"
  inputLog \\"BLOCK_NUMBER: $BLOCK_NUMBER\\"
  inputLog \\"PEER_ADDRESS: $PEER_ADDRESS\\"

  docker exec \\"$CLI_NAME\\" mkdir -p /tmp/hyperledger/blocks/
  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" peer channel fetch oldest /tmp/hyperledger/blocks/oldest.block \\\\
    -c \\"$CHANNEL_NAME\\" --tls --cafile \\"$CA_CERT\\"
  docker exec -e CORE_PEER_ADDRESS=\\"$PEER_ADDRESS\\" \\\\
    \\"$CLI_NAME\\" configtxlator proto_decode \\\\
    --input /tmp/hyperledger/blocks/oldest.block \\\\
    --type common.Block |
    jq .data.data[0].payload.data.config >\\"$BLOCK_FILE_NAME\\"

  docker exec \\"$CLI_NAME\\" rm -rf /tmp/hyperledger/assets/
}
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/scripts/cli/channel_fns.sh from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"#!/usr/bin/env bash

set -eu

createChannelAndJoin() {
  local CHANNEL_NAME=$1

  local CORE_PEER_LOCALMSPID=$2
  local CORE_PEER_ADDRESS=$3
  local CORE_PEER_MSPCONFIGPATH=$(realpath \\"$4\\")

  local ORDERER_URL=$5

  local DIR_NAME=step-createChannelAndJoin-$CHANNEL_NAME-$CORE_PEER_ADDRESS

  echo \\"Creating channel with name: \${CHANNEL_NAME}\\"
  echo \\"   Orderer: $ORDERER_URL\\"
  echo \\"   CORE_PEER_LOCALMSPID: $CORE_PEER_LOCALMSPID\\"
  echo \\"   CORE_PEER_ADDRESS: $CORE_PEER_ADDRESS\\"
  echo \\"   CORE_PEER_MSPCONFIGPATH: $CORE_PEER_MSPCONFIGPATH\\"

  mkdir \\"$DIR_NAME\\" && cd \\"$DIR_NAME\\"

  cp /var/hyperledger/cli/config/\\"$CHANNEL_NAME\\".tx .

  peer channel create -o \\"\${ORDERER_URL}\\" -c \\"\${CHANNEL_NAME}\\" -f ./\\"$CHANNEL_NAME\\".tx
  peer channel join -b \\"\${CHANNEL_NAME}\\".block

  rm -rf \\"$DIR_NAME\\"
}

createChannelAndJoinTls() {
  local CHANNEL_NAME=$1

  local CORE_PEER_LOCALMSPID=$2
  local CORE_PEER_ADDRESS=$3
  local CORE_PEER_MSPCONFIGPATH=$(realpath \\"$4\\")
  local CORE_PEER_TLS_MSPCONFIGPATH=$(realpath \\"$5\\")
  local TLS_CA_CERT_PATH=$(realpath \\"$6\\")
  local ORDERER_URL=$7

  local CORE_PEER_TLS_CERT_FILE=$CORE_PEER_TLS_MSPCONFIGPATH/client.crt
  local CORE_PEER_TLS_KEY_FILE=$CORE_PEER_TLS_MSPCONFIGPATH/client.key
  local CORE_PEER_TLS_ROOTCERT_FILE=$CORE_PEER_TLS_MSPCONFIGPATH/ca.crt

  local DIR_NAME=step-createChannelAndJoinTls-$CHANNEL_NAME-$CORE_PEER_ADDRESS

  echo \\"Creating channel with name (TLS): \${CHANNEL_NAME}\\"
  echo \\"   Orderer: $ORDERER_URL\\"
  echo \\"   CORE_PEER_LOCALMSPID: $CORE_PEER_LOCALMSPID\\"
  echo \\"   CORE_PEER_ADDRESS: $CORE_PEER_ADDRESS\\"
  echo \\"   CORE_PEER_MSPCONFIGPATH: $CORE_PEER_MSPCONFIGPATH\\"
  echo \\"\\"
  echo \\"   TLS_CA_CERT_PATH is: $TLS_CA_CERT_PATH\\"
  echo \\"   CORE_PEER_TLS_CERT_FILE: $CORE_PEER_TLS_CERT_FILE\\"
  echo \\"   CORE_PEER_TLS_KEY_FILE: $CORE_PEER_TLS_KEY_FILE\\"
  echo \\"   CORE_PEER_TLS_ROOTCERT_FILE: $CORE_PEER_TLS_ROOTCERT_FILE\\"

  mkdir \\"$DIR_NAME\\" && cd \\"$DIR_NAME\\"

  cp /var/hyperledger/cli/config/\\"$CHANNEL_NAME\\".tx .

  peer channel create -o \\"\${ORDERER_URL}\\" -c \\"\${CHANNEL_NAME}\\" -f ./\\"$CHANNEL_NAME\\".tx --tls --cafile \\"$TLS_CA_CERT_PATH\\"
  peer channel join -b \\"\${CHANNEL_NAME}\\".block --tls --cafile \\"$TLS_CA_CERT_PATH\\"

  rm -rf \\"$DIR_NAME\\"
}

fetchChannelAndJoin() {
  local CHANNEL_NAME=$1

  local CORE_PEER_LOCALMSPID=$2
  local CORE_PEER_ADDRESS=$3
  local CORE_PEER_MSPCONFIGPATH=$(realpath \\"$4\\")

  local ORDERER_URL=$5

  local DIR_NAME=step-fetchChannelAndJoin-$CHANNEL_NAME-$CORE_PEER_ADDRESS

  echo \\"Fetching channel with name: \${CHANNEL_NAME}\\"
  echo \\"   Orderer: $ORDERER_URL\\"
  echo \\"   CORE_PEER_LOCALMSPID: $CORE_PEER_LOCALMSPID\\"
  echo \\"   CORE_PEER_ADDRESS: $CORE_PEER_ADDRESS\\"
  echo \\"   CORE_PEER_MSPCONFIGPATH: $CORE_PEER_MSPCONFIGPATH\\"

  mkdir \\"$DIR_NAME\\" && cd \\"$DIR_NAME\\"

  peer channel fetch newest -c \\"\${CHANNEL_NAME}\\" --orderer \\"\${ORDERER_URL}\\"
  peer channel join -b \\"\${CHANNEL_NAME}\\"_newest.block

  rm -rf \\"$DIR_NAME\\"
}

fetchChannelAndJoinTls() {
  local CHANNEL_NAME=$1

  local CORE_PEER_LOCALMSPID=$2
  local CORE_PEER_ADDRESS=$3
  local CORE_PEER_MSPCONFIGPATH=$(realpath \\"$4\\")
  local CORE_PEER_TLS_MSPCONFIGPATH=$(realpath \\"$5\\")
  local TLS_CA_CERT_PATH=$(realpath \\"$6\\")
  local ORDERER_URL=$7

  local CORE_PEER_TLS_CERT_FILE=$CORE_PEER_TLS_MSPCONFIGPATH/client.crt
  local CORE_PEER_TLS_KEY_FILE=$CORE_PEER_TLS_MSPCONFIGPATH/client.key
  local CORE_PEER_TLS_ROOTCERT_FILE=$CORE_PEER_TLS_MSPCONFIGPATH/ca.crt

  local DIR_NAME=step-fetchChannelAndJoinTls-$CHANNEL_NAME-$CORE_PEER_ADDRESS

  echo \\"Fetching channel with name (TLS): \${CHANNEL_NAME}\\"
  echo \\"   Orderer: $ORDERER_URL\\"
  echo \\"   CORE_PEER_LOCALMSPID: $CORE_PEER_LOCALMSPID\\"
  echo \\"   CORE_PEER_ADDRESS: $CORE_PEER_ADDRESS\\"
  echo \\"   CORE_PEER_MSPCONFIGPATH: $CORE_PEER_MSPCONFIGPATH\\"
  echo \\"\\"
  echo \\"   TLS_CA_CERT_PATH is: $TLS_CA_CERT_PATH\\"
  echo \\"   CORE_PEER_TLS_CERT_FILE: $CORE_PEER_TLS_CERT_FILE\\"
  echo \\"   CORE_PEER_TLS_KEY_FILE: $CORE_PEER_TLS_KEY_FILE\\"
  echo \\"   CORE_PEER_TLS_ROOTCERT_FILE: $CORE_PEER_TLS_ROOTCERT_FILE\\"

  mkdir \\"$DIR_NAME\\" && cd \\"$DIR_NAME\\"

  peer channel fetch newest -c \\"\${CHANNEL_NAME}\\" --orderer \\"\${ORDERER_URL}\\" --tls --cafile \\"$TLS_CA_CERT_PATH\\"
  peer channel join -b \\"\${CHANNEL_NAME}\\"_newest.block --tls --cafile \\"$TLS_CA_CERT_PATH\\"

  rm -rf \\"$DIR_NAME\\"
}
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/snapshot-scripts.sh from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"#!/usr/bin/env bash

__getOrdererAndPeerNodes() {
  echo \\"
      orderer0.group1.orderer.example.com
      peer0.org1.example.com
      peer1.org1.example.com
      peer0.org2.example.com
  \\"
}

__getCASQLiteNodes() {
  echo \\"
      ca.orderer.example.com
      ca.org1.example.com
      ca.org2.example.com
  \\"
}

__getCAPostgresNodes() {
  echo \\"
  \\"
}

__createSnapshot() {
  cd \\"$FABLO_NETWORK_ROOT/..\\"
  backup_dir=\\"\${1:-\\"snapshot-$(date -u +\\"%Y%m%d%H%M%S\\")\\"}\\"

  if [ -d \\"$backup_dir\\" ] && [ \\"$(ls -A \\"$backup_dir\\")\\" ]; then
    echo \\"Error: Directory '$backup_dir' already exists and is not empty!\\"
    exit 1
  fi

  mkdir -p \\"$backup_dir\\"
  cp -R ./fablo-target \\"$backup_dir/\\"

  for node in $(__getCASQLiteNodes); do
    echo \\"Saving state of $node...\\"
    mkdir -p \\"$backup_dir/$node\\"
    docker cp \\"$node:/etc/hyperledger/fabric-ca-server/fabric-ca-server.db\\" \\"$backup_dir/$node/fabric-ca-server.db\\"
  done

  for node in $(__getCAPostgresNodes); do
    echo \\"Saving state of $node...\\"
    mkdir -p \\"$backup_dir/$node/pg-data\\"
    docker exec \\"$node\\" pg_dump -c --if-exists -U postgres fabriccaserver >\\"$backup_dir/$node/fabriccaserver.sql\\"
  done

  for node in $(__getOrdererAndPeerNodes); do
    echo \\"Saving state of $node...\\"
    docker cp \\"$node:/var/hyperledger/production/\\" \\"$backup_dir/$node/\\"
  done
}

__cloneSnapshot() {
  cd \\"$FABLO_NETWORK_ROOT/..\\"
  target_dir=\\"$1\\"

  if [ -d \\"$target_dir/fablo-target\\" ]; then
    echo \\"Error: Directory '$target_dir/fablo-target' already exists! Execute 'fablo prune' to remove the current network.\\"
    exit 1
  fi

  cp -R ./fablo-target \\"$target_dir/fablo-target\\"
  (cd \\"$target_dir/fablo-target/fabric-docker\\" && docker-compose up --no-start)

  for node in $(__getCASQLiteNodes); do
    echo \\"Restoring $node...\\"
    if [ ! -d \\"$node\\" ]; then
      echo \\"Warning: Cannot restore '$node', directory does not exist!\\"
    else
      docker cp \\"./$node/fabric-ca-server.db\\" \\"$node:/etc/hyperledger/fabric-ca-server/fabric-ca-server.db\\"
    fi
  done

  for node in $(__getCAPostgresNodes); do
    echo \\"Restoring $node...\\"
    if [ ! -d \\"$node\\" ]; then
      echo \\"Warning: Cannot restore '$node', directory does not exist!\\"
    else
      docker cp \\"./$node/fabriccaserver.sql\\" \\"$node:/docker-entrypoint-initdb.d/fabriccaserver.sql\\"
    fi
  done

  for node in $(__getOrdererAndPeerNodes); do
    echo \\"Restoring $node...\\"
    if [ ! -d \\"$node\\" ]; then
      echo \\"Warning: Cannot restore '$node', directory does not exist!\\"
    else
      docker cp \\"./$node/\\" \\"$node:/var/hyperledger/production/\\"
    fi
  done
}

createSnapshot() {
  (set -eu && __createSnapshot \\"$1\\")
}

cloneSnapshot() {
  (set -eu && __cloneSnapshot \\"$1\\")
}
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/hooks/post-generate.sh from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
"#!/usr/bin/env bash

# The code from this file was called after Fablo generated Hyperledger Fabric configuration
echo \\"Executing post-generate hook\\"
"
`;

exports[`samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml should create proper files from samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml 1`] = `
Array [
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/.gitignore",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/collections/and-policy-chaincode.json",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/collections/or-policy-chaincode.json",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/configtx.yaml",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/connection-profiles/connection-profile-orderer.json",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/connection-profiles/connection-profile-orderer.yaml",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/connection-profiles/connection-profile-org1.json",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/connection-profiles/connection-profile-org1.yaml",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/connection-profiles/connection-profile-org2.json",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/connection-profiles/connection-profile-org2.yaml",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/crypto-config-orderer.yaml",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/crypto-config-org1.yaml",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/crypto-config-org2.yaml",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-config/explorer/config-global.json",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker.sh",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/.env",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/channel-query-scripts.sh",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/commands-generated.sh",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/docker-compose.yaml",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/scripts/base-functions.sh",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/scripts/base-help.sh",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/scripts/chaincode-functions.sh",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/scripts/channel-query-functions.sh",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/scripts/cli/channel_fns.sh",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/fabric-docker/snapshot-scripts.sh",
  "e2e/__tmp__/samples/fablo-config-hlf1.4-2orgs-2chaincodes-private-data.yaml.tmpdir/fablo-target/hooks/post-generate.sh",
]
`;
